Bug 599367: Set content type on moz-filedata channels. r=sicking a=blocking-beta-8
UltraBlame original commit: a0699cc12503412e55ca6e10132dbda2b47dd583

--- a/content/base/test/file_mozfiledataurl_inner.html
+++ b/content/base/test/file_mozfiledataurl_inner.html
@@ -26,6 +26,9 @@ var
 img
 ;
 var
+audio
+;
+var
 iframe
 ;
 addEventListener
@@ -65,6 +68,22 @@ mess
 .
 img
 ;
+else
+if
+(
+"
+audio
+"
+in
+mess
+)
+audio
+.
+src
+=
+mess
+.
+audio
 else
 if
 (
@@ -182,6 +201,24 @@ obj
 "
 *
 "
+)
+;
+}
+function
+audioNotifyParent
+(
+e
+)
+{
+sendItUp
+(
+{
+type
+:
+e
+.
+type
+}
 )
 ;
 }
@@ -346,6 +383,27 @@ onload
 =
 iframeNotifyParent
 ;
+audio
+=
+document
+.
+getElementById
+(
+'
+audio
+'
+)
+;
+audio
+.
+onerror
+=
+audio
+.
+oncanplay
+=
+audioNotifyParent
+;
 }
 <
 /
@@ -359,6 +417,12 @@ img
 id
 =
 img
+>
+<
+audio
+id
+=
+audio
 >
 <
 iframe
