--- a/content/base/test/test_mozfiledataurl.html
+++ b/content/base/test/test_mozfiledataurl.html
@@ -185,6 +185,23 @@ event
 "
 >
 <
+audio
+id
+=
+audio
+oncanplay
+=
+"
+gen
+.
+send
+(
+event
+)
+;
+"
+>
+<
 input
 type
 =
@@ -279,7 +296,7 @@ const
 innerSameSiteURI
 =
 "
-file_bug543870_inner
+file_mozfiledataurl_inner
 .
 html
 "
@@ -304,7 +321,7 @@ base
 /
 test
 /
-file_bug543870_inner
+file_mozfiledataurl_inner
 .
 html
 "
@@ -344,6 +361,17 @@ getElementById
 (
 '
 img
+'
+)
+;
+audio
+=
+document
+.
+getElementById
+(
+'
+audio
 '
 )
 ;
@@ -394,7 +422,7 @@ file
 getFile
 (
 "
-file_bug543870_img
+file_mozfiledataurl_img
 .
 jpg
 "
@@ -477,7 +505,7 @@ img
 src
 =
 "
-file_bug543870_img
+file_mozfiledataurl_img
 .
 jpg
 "
@@ -803,6 +831,352 @@ height
 Attempt
 to
 load
+an
+audio
+in
+this
+document
+var
+file
+=
+getFile
+(
+"
+file_mozfiledataurl_audio
+.
+ogg
+"
+)
+;
+var
+fileurl
+=
+createBlobURL
+(
+file
+)
+;
+audio
+.
+src
+=
+fileurl
+;
+var
+e
+=
+(
+yield
+)
+;
+is
+(
+e
+.
+type
+"
+canplay
+"
+"
+loaded
+successfully
+"
+)
+;
+/
+/
+Revoke
+url
+and
+attempt
+to
+load
+a
+audio
+in
+this
+document
+audio
+.
+src
+=
+"
+file_mozfiledataurl_audio
+.
+ogg
+"
+;
+is
+(
+(
+yield
+)
+.
+type
+"
+canplay
+"
+"
+successfully
+reset
+audio
+"
+)
+;
+revokeBlobURL
+(
+fileurl
+)
+;
+todo
+(
+false
+"
+urls
+need
+to
+act
+like
+404s
+not
+fail
+to
+parse
+"
+)
+;
+/
+*
+img
+.
+src
+=
+fileurl
+;
+var
+e
+=
+(
+yield
+)
+;
+is
+(
+e
+.
+type
+"
+error
+"
+"
+failed
+successfully
+"
+)
+;
+isnot
+(
+img
+.
+width
+120
+"
+correct
+error
+width
+"
+)
+;
+isnot
+(
+img
+.
+height
+90
+"
+correct
+error
+height
+"
+)
+;
+*
+/
+/
+/
+Generate
+new
+fileurl
+and
+make
+sure
+it
+'
+s
+different
+from
+the
+old
+var
+oldFileurl
+=
+fileurl
+;
+var
+fileurl
+=
+createBlobURL
+(
+file
+)
+;
+isnot
+(
+fileurl
+oldFileurl
+"
+createBlobURL
+generated
+the
+same
+url
+twice
+"
+)
+;
+/
+/
+Attempt
+to
+load
+an
+audio
+in
+a
+different
+same
+-
+origin
+document
+inner
+.
+src
+=
+innerSameSiteURI
+;
+yield
+;
+inner
+.
+contentWindow
+.
+postMessage
+(
+JSON
+.
+stringify
+(
+{
+audio
+:
+fileurl
+}
+)
+"
+*
+"
+)
+;
+var
+res
+=
+(
+yield
+)
+;
+is
+(
+res
+.
+type
+"
+canplay
+"
+"
+loaded
+successfully
+"
+)
+;
+/
+/
+Attempt
+to
+load
+an
+audio
+in
+a
+different
+cross
+-
+origin
+document
+inner
+.
+src
+=
+innerCrossSiteURI
+;
+yield
+;
+inner
+.
+contentWindow
+.
+postMessage
+(
+JSON
+.
+stringify
+(
+{
+audio
+:
+fileurl
+}
+)
+"
+*
+"
+)
+;
+var
+res
+=
+(
+yield
+)
+;
+is
+(
+res
+.
+type
+"
+error
+"
+"
+failed
+successfully
+"
+)
+;
+/
+/
+Attempt
+to
+load
 a
 HTML
 document
@@ -833,7 +1207,7 @@ iframe
 src
 =
 "
-file_bug543870_doc
+file_mozfiledataurl_doc
 .
 html
 "
@@ -940,7 +1314,7 @@ file
 getFile
 (
 "
-file_bug543870_doc
+file_mozfiledataurl_doc
 .
 html
 "
@@ -1094,7 +1468,7 @@ stringify
 iframe
 :
 "
-file_bug543870_doc
+file_mozfiledataurl_doc
 .
 html
 "
@@ -1349,7 +1723,7 @@ file
 getFile
 (
 "
-file_bug543870_text
+file_mozfiledataurl_text
 .
 txt
 "
