Bug 505158 - Handle invalid media in video element's source children. r=roc a=blocking2.0
UltraBlame original commit: 4874ca2efe6f2654cf88c718adf025f85a44eb87

--- a/content/media/test/test_load_candidates.html
+++ b/content/media/test/test_load_candidates.html
@@ -240,18 +240,19 @@ evt
 .
 target
 ;
-ok
+is
 (
 v
 .
 _error
+2
 "
 Should
 have
 received
-an
+2
 error
-event
+events
 before
 loaded
 "
@@ -301,8 +302,8 @@ target
 parentNode
 .
 _error
-=
-true
++
++
 ;
 }
 var
@@ -394,7 +395,7 @@ v
 .
 _error
 =
-false
+0
 ;
 v
 .
@@ -488,6 +489,70 @@ s2
 .
 src
 =
+"
+test_load_candidates
+.
+html
+"
+;
+/
+/
+definitely
+an
+invalid
+media
+file
+regardless
+of
+its
+actual
+mime
+type
+.
+.
+.
+s2
+.
+addEventListener
+(
+"
+error
+"
+errorHandler
+false
+)
+;
+v
+.
+appendChild
+(
+s2
+)
+;
+var
+s3
+=
+document
+.
+createElement
+(
+"
+source
+"
+)
+;
+s3
+.
+type
+=
+test
+.
+type
+;
+s3
+.
+src
+=
 test
 .
 name
@@ -496,7 +561,7 @@ v
 .
 appendChild
 (
-s2
+s3
 )
 ;
 v
