--- a/content/media/test/test_referer.html
+++ b/content/media/test/test_referer.html
@@ -221,10 +221,6 @@ checkComplete
 (
 )
 {
-complete
-=
-true
-;
 for
 (
 var
@@ -243,28 +239,27 @@ length
 i
 )
 {
-complete
-=
+if
+(
+!
 media
 [
 i
 ]
 .
 _complete
-;
-}
-if
-(
-complete
 )
 {
+return
+;
+}
+}
 SimpleTest
 .
 finish
 (
 )
 ;
-}
 }
 function
 loadError
