--- a/content/svg/content/test/test_dataTypes.html
+++ b/content/svg/content/test/test_dataTypes.html
@@ -1950,6 +1950,41 @@ setAttribute
 orient
 "
 "
+auto
+"
+)
+;
+is
+(
+marker
+.
+getAttribute
+(
+"
+orient
+"
+)
+"
+auto
+"
+"
+checking
+'
+auto
+'
+string
+preserved
+"
+)
+;
+marker
+.
+setAttribute
+(
+"
+orient
+"
+"
 "
 )
 ;
