Bug 836157 - Contacts API: Remove unused indexes. r=bent
UltraBlame original commit: aba3331a5c543556a49d95c4f8017be6d098475a

--- a/dom/contacts/tests/test_contacts_basics.html
+++ b/dom/contacts/tests/test_contacts_basics.html
@@ -2386,7 +2386,7 @@ filterBy
 :
 [
 "
-name
+givenName
 "
 ]
 filterOp
@@ -2398,7 +2398,10 @@ filterValue
 :
 properties1
 .
-name
+givenName
+[
+1
+]
 .
 substring
 (
@@ -2931,7 +2934,7 @@ filterBy
 :
 [
 "
-name
+givenName
 "
 ]
 filterOp
@@ -2943,7 +2946,10 @@ filterValue
 :
 properties1
 .
-name
+givenName
+[
+0
+]
 .
 substring
 (
@@ -3184,7 +3190,7 @@ filterBy
 :
 [
 "
-name
+givenName
 "
 ]
 filterOp
@@ -3196,7 +3202,10 @@ filterValue
 :
 properties1
 .
-name
+givenName
+[
+0
+]
 .
 substring
 (
@@ -3374,7 +3383,7 @@ filterBy
 :
 [
 "
-name
+givenName
 "
 ]
 filterOp
@@ -3386,7 +3395,10 @@ filterValue
 :
 properties1
 .
-name
+givenName
+[
+1
+]
 .
 substring
 (
@@ -3548,7 +3560,7 @@ filterBy
 :
 [
 "
-name
+givenName
 "
 ]
 filterOp
@@ -3560,7 +3572,10 @@ filterValue
 :
 properties1
 .
-name
+givenName
+[
+1
+]
 .
 substring
 (
@@ -4309,7 +4324,7 @@ filterBy
 :
 [
 "
-name
+familyName
 "
 "
 givenName
@@ -4438,9 +4453,6 @@ options
 filterBy
 :
 [
-"
-name
-"
 "
 givenName
 "
@@ -5301,7 +5313,7 @@ filterBy
 :
 [
 "
-name
+givenName
 "
 "
 email
@@ -5316,7 +5328,7 @@ filterValue
 :
 properties1
 .
-name
+givenName
 [
 0
 ]
@@ -5429,7 +5441,7 @@ filterBy
 :
 [
 "
-nickname
+givenName
 "
 "
 email
@@ -5444,7 +5456,10 @@ filterValue
 :
 properties1
 .
-nickname
+givenName
+[
+0
+]
 }
 ;
 req
@@ -5549,13 +5564,10 @@ filterBy
 :
 [
 "
-nickname
-"
-"
 email
 "
 "
-name
+givenName
 "
 ]
 filterOp
@@ -5567,7 +5579,10 @@ filterValue
 :
 properties1
 .
-nickname
+givenName
+[
+1
+]
 }
 ;
 req
@@ -5723,13 +5738,10 @@ filterBy
 :
 [
 "
-nickname
-"
-"
 email
 "
 "
-name
+givenName
 "
 ]
 filterOp
@@ -5741,7 +5753,10 @@ filterValue
 :
 properties1
 .
-nickname
+givenName
+[
+0
+]
 }
 ;
 /
@@ -6232,7 +6247,7 @@ filterBy
 :
 [
 "
-name
+givenName
 "
 "
 email
@@ -6247,7 +6262,7 @@ filterValue
 :
 properties1
 .
-name
+givenName
 [
 0
 ]
@@ -6357,7 +6372,7 @@ filterBy
 :
 [
 "
-name
+givenName
 "
 "
 email
@@ -6372,7 +6387,7 @@ filterValue
 :
 properties2
 .
-name
+givenName
 [
 0
 ]
@@ -7163,7 +7178,7 @@ filterBy
 :
 [
 "
-name
+givenName
 "
 ]
 filterOp
@@ -7175,7 +7190,7 @@ filterValue
 :
 properties1
 .
-name
+givenName
 [
 0
 ]
@@ -7266,9 +7281,6 @@ filterBy
 :
 [
 "
-name
-"
-"
 givenName
 "
 "
@@ -7276,9 +7288,6 @@ tel
 "
 "
 email
-"
-"
-note
 "
 ]
 filterOp
@@ -7290,7 +7299,7 @@ filterValue
 :
 properties1
 .
-name
+givenName
 [
 0
 ]
@@ -7681,7 +7690,7 @@ filterBy
 :
 [
 "
-name
+givenName
 "
 ]
 filterOp
@@ -7693,7 +7702,7 @@ filterValue
 :
 properties2
 .
-name
+givenName
 [
 0
 ]
@@ -7789,7 +7798,7 @@ name
 "
 XXX
 "
-nickname
+givenName
 :
 "
 XXX
@@ -8764,7 +8773,7 @@ createResult1
 init
 (
 {
-name
+givenName
 :
 "
 customTest
@@ -8854,7 +8863,7 @@ req2
 .
 result
 .
-name
+givenName
 "
 customTest
 "
