--- a/dom/contacts/tests/test_contacts_blobs.html
+++ b/dom/contacts/tests/test_contacts_blobs.html
@@ -623,7 +623,7 @@ var
 properties1
 =
 {
-name
+givenName
 :
 "
 xTestname1
@@ -639,7 +639,7 @@ var
 properties2
 =
 {
-name
+givenName
 :
 "
 yTestname2
@@ -1138,7 +1138,7 @@ filterBy
 :
 [
 "
-name
+givenName
 "
 ]
 filterOp
@@ -1150,7 +1150,7 @@ filterValue
 :
 properties1
 .
-name
+givenName
 .
 substring
 (
@@ -1343,7 +1343,7 @@ filterBy
 :
 [
 "
-name
+givenName
 "
 ]
 filterOp
@@ -1355,7 +1355,7 @@ filterValue
 :
 properties2
 .
-name
+givenName
 .
 substring
 (
@@ -1469,7 +1469,7 @@ createResult1
 init
 (
 {
-name
+givenName
 :
 "
 asdf
@@ -1576,7 +1576,7 @@ createResult1
 init
 (
 {
-name
+givenName
 :
 "
 jkl
@@ -1670,7 +1670,7 @@ filterBy
 :
 [
 "
-name
+givenName
 "
 ]
 filterOp
