--- a/browser/devtools/debugger/test/browser_dbg_frame-parameters.html
+++ b/browser/devtools/debugger/test/browser_dbg_frame-parameters.html
@@ -98,6 +98,39 @@ d
 b
 }
 ;
+var
+myVar
+=
+{
+_prop
+:
+42
+get
+prop
+(
+)
+{
+return
+this
+.
+_prop
+;
+}
+set
+prop
+(
+val
+)
+{
+this
+.
+_prop
+=
+val
+;
+}
+}
+;
 debugger
 ;
 }
