Bug 824243 - Make Profiler UI localizable, r=robcee
UltraBlame original commit: 44772e261a55070796a716202738cd52bd5700b5

--- a/browser/devtools/profiler/cleopatra/cleopatra.html
+++ b/browser/devtools/profiler/cleopatra/cleopatra.html
@@ -126,6 +126,26 @@ cleopatra
 /
 js
 /
+strings
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+profiler
+/
+cleopatra
+/
+js
+/
 parser
 .
 js
