Bug 781572 - Implement min and max attributes behaviour for <input type='time'>. r=smaug
UltraBlame original commit: 6639a23e0eb0c7b105553240f1ac765a6beba674

--- a/content/html/content/test/test_bug598643.html
+++ b/content/html/content/test/test_bug598643.html
@@ -445,6 +445,15 @@ image
 "
 hidden
 "
+'
+number
+'
+'
+date
+'
+'
+time
+'
 ]
 /
 /
@@ -464,9 +473,6 @@ yet
 .
 [
 "
-number
-"
-"
 range
 "
 "
@@ -476,22 +482,16 @@ color
 datetime
 "
 "
-date
-"
-"
 month
 "
 "
 week
 "
-"
-time
-"
-"
+'
 datetime
 -
 local
-"
+'
 ]
 ]
 ;
@@ -775,59 +775,19 @@ input
 type
 =
 type
-ok
+todo_is
 (
 input
 .
-validity
-.
-valid
+type
+type
+type
++
 "
-the
-element
 should
+not
 be
-valid
-[
-type
-=
-"
-+
-type
-+
-"
-]
-"
-)
-;
-ok
-(
-!
-input
-.
-validity
-.
-tooLong
-"
-the
-element
-shouldn
-'
-t
-suffer
-from
-being
-too
-long
-[
-type
-=
-"
-+
-type
-+
-"
-]
+implemented
 "
 )
 ;
