--- a/content/html/content/test/forms/test_max_attribute.html
+++ b/content/html/content/test/forms/test_max_attribute.html
@@ -201,155 +201,259 @@ Bug
 *
 /
 var
-types
+data
 =
 [
-[
+{
+type
+:
 '
 hidden
 '
+apply
+:
 false
-]
-[
+}
+{
+type
+:
 '
 text
 '
+apply
+:
 false
-]
-[
+}
+{
+type
+:
 '
 search
 '
+apply
+:
 false
-]
-[
+}
+{
+type
+:
 '
 tel
 '
+apply
+:
 false
-]
-[
+}
+{
+type
+:
 '
 url
 '
+apply
+:
 false
-]
-[
+}
+{
+type
+:
 '
 email
 '
+apply
+:
 false
-]
-[
+}
+{
+type
+:
 '
 password
 '
+apply
+:
 false
-]
-[
+}
+{
+type
+:
 '
 datetime
 '
+apply
+:
 true
+todo
+:
 true
-]
-[
+}
+{
+type
+:
 '
 date
 '
+apply
+:
 true
-]
-[
+}
+{
+type
+:
 '
 month
 '
+apply
+:
 true
+todo
+:
 true
-]
-[
+}
+{
+type
+:
 '
 week
 '
+apply
+:
 true
+todo
+:
 true
-]
-[
+}
+{
+type
+:
 '
 time
 '
+apply
+:
 true
-]
-[
+}
+{
+type
+:
 '
 datetime
 -
 local
 '
+apply
+:
 true
+todo
+:
 true
-]
-[
+}
+{
+type
+:
 '
 number
 '
+apply
+:
 true
-]
-[
+}
+{
+type
+:
 '
 range
 '
+apply
+:
 true
+todo
+:
 true
-]
-[
+}
+{
+type
+:
 '
 color
 '
+apply
+:
 false
+todo
+:
 true
-]
-[
+}
+{
+type
+:
 '
 checkbox
 '
+apply
+:
 false
-]
-[
+}
+{
+type
+:
 '
 radio
 '
+apply
+:
 false
-]
-[
+}
+{
+type
+:
 '
 file
 '
+apply
+:
 false
-]
-[
+}
+{
+type
+:
 '
 submit
 '
+apply
+:
 false
-]
-[
+}
+{
+type
+:
 '
 image
 '
+apply
+:
 false
-]
-[
+}
+{
+type
+:
 '
 reset
 '
+apply
+:
 false
-]
-[
+}
+{
+type
+:
 '
 button
 '
+apply
+:
 false
-]
+}
 ]
 ;
 var
@@ -713,34 +817,31 @@ function
 for
 (
 var
-data
+test
 of
-types
+data
 )
 {
 input
 .
 type
 =
-data
-[
-0
-]
+test
+.
+type
 ;
 var
 apply
 =
-data
-[
-1
-]
+test
+.
+apply
 ;
 if
 (
-data
-[
-2
-]
+test
+.
+todo
 )
 {
 todo_is
@@ -748,14 +849,12 @@ todo_is
 input
 .
 type
-data
-[
-0
-]
-data
-[
-0
-]
+test
+.
+type
+test
+.
+type
 +
 "
 isn
@@ -769,21 +868,6 @@ yet
 continue
 ;
 }
-if
-(
-input
-.
-type
-=
-=
-'
-time
-'
-)
-{
-continue
-;
-}
 checkValidity
 (
 input
@@ -792,18 +876,104 @@ apply
 false
 )
 ;
-if
+switch
 (
 input
 .
 type
+)
+{
+case
+'
+hidden
+'
+:
+case
+'
+text
+'
+:
+case
+'
+search
+'
+:
+case
+'
+password
+'
+:
+case
+'
+url
+'
+:
+case
+'
+tel
+'
+:
+case
+'
+email
+'
+:
+case
+'
+number
+'
+:
+case
+'
+checkbox
+'
+:
+case
+'
+radio
+'
+:
+case
+'
+file
+'
+:
+case
+'
+submit
+'
+:
+case
+'
+reset
+'
+:
+case
+'
+button
+'
+:
+case
+'
+image
+'
+:
+input
+.
+max
 =
-=
+'
+-
+1
+'
+;
+break
+;
+case
 '
 date
 '
-)
-{
+:
 input
 .
 max
@@ -816,16 +986,50 @@ max
 27
 '
 ;
-}
-else
-{
+break
+;
+case
+'
+time
+'
+:
 input
 .
 max
 =
 '
-2
+02
+:
+20
 '
+;
+break
+;
+default
+:
+ok
+(
+false
+'
+please
+add
+a
+case
+for
+this
+new
+type
+(
+'
++
+input
+.
+type
++
+'
+)
+'
+)
 ;
 }
 checkValidity
@@ -836,18 +1040,91 @@ apply
 apply
 )
 ;
-if
+switch
 (
 input
 .
 type
+)
+{
+case
+'
+text
+'
+:
+case
+'
+hidden
+'
+:
+case
+'
+search
+'
+:
+case
+'
+password
+'
+:
+case
+'
+tel
+'
+:
+case
+'
+radio
+'
+:
+case
+'
+checkbox
+'
+:
+case
+'
+reset
+'
+:
+case
+'
+button
+'
+:
+case
+'
+submit
+'
+:
+case
+'
+image
+'
+:
+input
+.
+value
 =
-=
+'
+0
+'
+;
+checkValidity
+(
+input
+true
+apply
+apply
+)
+;
+break
+;
+case
 '
 url
 '
-)
-{
+:
 input
 .
 value
@@ -870,20 +1147,13 @@ apply
 apply
 )
 ;
-}
-else
-if
-(
-input
-.
-type
-=
-=
+break
+;
+case
 '
 email
 '
-)
-{
+:
 input
 .
 value
@@ -903,20 +1173,13 @@ apply
 apply
 )
 ;
-}
-else
-if
-(
-input
-.
-type
-=
-=
+break
+;
+case
 '
 file
 '
-)
-{
+:
 /
 /
 Need
@@ -1088,20 +1351,25 @@ remove
 false
 )
 ;
-}
-else
-if
-(
-input
-.
-type
-=
-=
+break
+;
+case
 '
 date
 '
-)
-{
+:
+input
+.
+max
+=
+'
+2012
+-
+06
+-
+27
+'
+;
 input
 .
 value
@@ -1298,9 +1566,52 @@ apply
 apply
 )
 ;
-}
-else
-{
+input
+.
+max
+=
+'
+'
+;
+checkValidity
+(
+input
+true
+apply
+false
+)
+;
+input
+.
+max
+=
+'
+foo
+'
+;
+checkValidity
+(
+input
+true
+apply
+false
+)
+;
+break
+;
+case
+'
+number
+'
+:
+input
+.
+max
+=
+'
+2
+'
+;
 input
 .
 value
@@ -1397,7 +1708,6 @@ apply
 apply
 )
 ;
-}
 input
 .
 max
@@ -1499,6 +1809,269 @@ validation
 message
 "
 )
+;
+}
+break
+;
+case
+'
+time
+'
+:
+input
+.
+max
+=
+'
+10
+:
+10
+'
+;
+input
+.
+value
+=
+'
+10
+:
+09
+'
+;
+checkValidity
+(
+input
+true
+apply
+apply
+)
+;
+input
+.
+value
+=
+'
+10
+:
+10
+'
+;
+checkValidity
+(
+input
+true
+apply
+apply
+)
+;
+input
+.
+value
+=
+'
+10
+:
+10
+:
+00
+'
+;
+checkValidity
+(
+input
+true
+apply
+apply
+)
+;
+input
+.
+value
+=
+'
+10
+:
+10
+:
+00
+.
+000
+'
+;
+checkValidity
+(
+input
+true
+apply
+apply
+)
+;
+input
+.
+value
+=
+'
+foo
+'
+;
+checkValidity
+(
+input
+true
+apply
+apply
+)
+;
+input
+.
+value
+=
+'
+10
+:
+11
+'
+;
+checkValidity
+(
+input
+false
+apply
+apply
+)
+;
+input
+.
+value
+=
+'
+10
+:
+10
+:
+00
+.
+001
+'
+;
+checkValidity
+(
+input
+false
+apply
+apply
+)
+;
+input
+.
+max
+=
+'
+01
+:
+00
+:
+00
+.
+01
+'
+;
+input
+.
+value
+=
+'
+01
+:
+00
+:
+00
+.
+001
+'
+;
+checkValidity
+(
+input
+true
+apply
+apply
+)
+;
+input
+.
+value
+=
+'
+01
+:
+00
+:
+00
+'
+;
+checkValidity
+(
+input
+true
+apply
+apply
+)
+;
+input
+.
+value
+=
+'
+01
+:
+00
+:
+00
+.
+1
+'
+;
+checkValidity
+(
+input
+false
+apply
+apply
+)
+;
+input
+.
+max
+=
+'
+'
+;
+checkValidity
+(
+input
+true
+apply
+false
+)
+;
+input
+.
+max
+=
+'
+foo
+'
+;
+checkValidity
+(
+input
+true
+apply
+false
+)
+;
+break
 ;
 }
 /
