--- a/content/html/content/test/forms/test_min_attribute.html
+++ b/content/html/content/test/forms/test_min_attribute.html
@@ -201,155 +201,259 @@ Bug
 *
 /
 var
-types
+data
 =
 [
-[
+{
+type
+:
 '
 hidden
 '
+apply
+:
 false
-]
-[
+}
+{
+type
+:
 '
 text
 '
+apply
+:
 false
-]
-[
+}
+{
+type
+:
 '
 search
 '
+apply
+:
 false
-]
-[
+}
+{
+type
+:
 '
 tel
 '
+apply
+:
 false
-]
-[
+}
+{
+type
+:
 '
 url
 '
+apply
+:
 false
-]
-[
+}
+{
+type
+:
 '
 email
 '
+apply
+:
 false
-]
-[
+}
+{
+type
+:
 '
 password
 '
+apply
+:
 false
-]
-[
+}
+{
+type
+:
 '
 datetime
 '
+apply
+:
 true
+todo
+:
 true
-]
-[
+}
+{
+type
+:
 '
 date
 '
+apply
+:
 true
-]
-[
+}
+{
+type
+:
 '
 month
 '
+apply
+:
 true
+todo
+:
 true
-]
-[
+}
+{
+type
+:
 '
 week
 '
+apply
+:
 true
+todo
+:
 true
-]
-[
+}
+{
+type
+:
 '
 time
 '
+apply
+:
 true
-]
-[
+}
+{
+type
+:
 '
 datetime
 -
 local
 '
+apply
+:
 true
+todo
+:
 true
-]
-[
+}
+{
+type
+:
 '
 number
 '
+apply
+:
 true
-]
-[
+}
+{
+type
+:
 '
 range
 '
+apply
+:
 true
+todo
+:
 true
-]
-[
+}
+{
+type
+:
 '
 color
 '
+apply
+:
 false
+todo
+:
 true
-]
-[
+}
+{
+type
+:
 '
 checkbox
 '
+apply
+:
 false
-]
-[
+}
+{
+type
+:
 '
 radio
 '
+apply
+:
 false
-]
-[
+}
+{
+type
+:
 '
 file
 '
+apply
+:
 false
-]
-[
+}
+{
+type
+:
 '
 submit
 '
+apply
+:
 false
-]
-[
+}
+{
+type
+:
 '
 image
 '
+apply
+:
 false
-]
-[
+}
+{
+type
+:
 '
 reset
 '
+apply
+:
 false
-]
-[
+}
+{
+type
+:
 '
 button
 '
+apply
+:
 false
-]
+}
 ]
 ;
 var
@@ -713,34 +817,31 @@ function
 for
 (
 var
-data
+test
 of
-types
+data
 )
 {
 input
 .
 type
 =
-data
-[
-0
-]
+test
+.
+type
 ;
 var
 apply
 =
-data
-[
-1
-]
+test
+.
+apply
 ;
 if
 (
-data
-[
-2
-]
+test
+.
+todo
 )
 {
 todo_is
@@ -748,14 +849,12 @@ todo_is
 input
 .
 type
-data
-[
-0
-]
-data
-[
-0
-]
+test
+.
+type
+test
+.
+type
 +
 "
 isn
@@ -769,21 +868,19 @@ yet
 continue
 ;
 }
-if
-(
-input
+/
+/
+The
+element
+should
+be
+valid
 .
-type
-=
-=
-'
-time
-'
-)
-{
-continue
-;
-}
+Range
+should
+not
+apply
+.
 checkValidity
 (
 input
@@ -792,18 +889,103 @@ apply
 false
 )
 ;
-if
+switch
 (
 input
 .
 type
+)
+{
+case
+'
+hidden
+'
+:
+case
+'
+text
+'
+:
+case
+'
+search
+'
+:
+case
+'
+password
+'
+:
+case
+'
+url
+'
+:
+case
+'
+tel
+'
+:
+case
+'
+email
+'
+:
+case
+'
+number
+'
+:
+case
+'
+checkbox
+'
+:
+case
+'
+radio
+'
+:
+case
+'
+file
+'
+:
+case
+'
+submit
+'
+:
+case
+'
+reset
+'
+:
+case
+'
+button
+'
+:
+case
+'
+image
+'
+:
+input
+.
+min
 =
-=
+'
+999
+'
+;
+break
+;
+case
 '
 date
 '
-)
-{
+:
 input
 .
 min
@@ -816,18 +998,68 @@ min
 27
 '
 ;
-}
-else
-{
+break
+;
+case
+'
+time
+'
+:
 input
 .
 min
 =
 '
-0
+20
+:
+20
 '
 ;
+break
+;
+default
+:
+ok
+(
+false
+'
+please
+add
+a
+case
+for
+this
+new
+type
+(
+'
++
+input
+.
+type
++
+'
+)
+'
+)
+;
 }
+/
+/
+The
+element
+should
+still
+be
+valid
+and
+range
+should
+apply
+if
+it
+can
+.
 checkValidity
 (
 input
@@ -836,18 +1068,91 @@ apply
 apply
 )
 ;
-if
+switch
 (
 input
 .
 type
+)
+{
+case
+'
+text
+'
+:
+case
+'
+hidden
+'
+:
+case
+'
+search
+'
+:
+case
+'
+password
+'
+:
+case
+'
+tel
+'
+:
+case
+'
+radio
+'
+:
+case
+'
+checkbox
+'
+:
+case
+'
+reset
+'
+:
+case
+'
+button
+'
+:
+case
+'
+submit
+'
+:
+case
+'
+image
+'
+:
+input
+.
+value
 =
-=
+'
+0
+'
+;
+checkValidity
+(
+input
+true
+apply
+apply
+)
+;
+break
+;
+case
 '
 url
 '
-)
-{
+:
 input
 .
 value
@@ -870,20 +1175,13 @@ apply
 apply
 )
 ;
-}
-else
-if
-(
-input
-.
-type
-=
-=
+break
+;
+case
 '
 email
 '
-)
-{
+:
 input
 .
 value
@@ -903,20 +1201,13 @@ apply
 apply
 )
 ;
-}
-else
-if
-(
-input
-.
-type
-=
-=
+break
+;
+case
 '
 file
 '
-)
-{
+:
 /
 /
 Need
@@ -1088,20 +1379,13 @@ remove
 false
 )
 ;
-}
-else
-if
-(
-input
-.
-type
-=
-=
+break
+;
+case
 '
 date
 '
-)
-{
+:
 input
 .
 value
@@ -1298,9 +1582,52 @@ apply
 apply
 )
 ;
-}
-else
-{
+input
+.
+min
+=
+'
+'
+;
+checkValidity
+(
+input
+true
+apply
+false
+)
+;
+input
+.
+min
+=
+'
+foo
+'
+;
+checkValidity
+(
+input
+true
+apply
+false
+)
+;
+break
+;
+case
+'
+number
+'
+:
+input
+.
+min
+=
+'
+0
+'
+;
 input
 .
 value
@@ -1400,7 +1727,6 @@ apply
 apply
 )
 ;
-}
 input
 .
 min
@@ -1446,20 +1772,10 @@ to
 a
 double
 in
+/
+/
 validationMessage
 .
-if
-(
-input
-.
-type
-=
-=
-'
-number
-'
-)
-{
 input
 .
 min
@@ -1501,6 +1817,330 @@ than
 validation
 message
 "
+)
+;
+break
+;
+case
+'
+time
+'
+:
+input
+.
+min
+=
+'
+20
+:
+20
+'
+;
+input
+.
+value
+=
+'
+20
+:
+20
+:
+01
+'
+;
+checkValidity
+(
+input
+true
+apply
+apply
+)
+;
+input
+.
+value
+=
+'
+20
+:
+20
+:
+00
+'
+;
+checkValidity
+(
+input
+true
+apply
+apply
+)
+;
+input
+.
+value
+=
+'
+foo
+'
+;
+checkValidity
+(
+input
+true
+apply
+apply
+)
+;
+input
+.
+value
+=
+'
+10
+:
+00
+'
+;
+checkValidity
+(
+input
+false
+apply
+apply
+)
+;
+input
+.
+min
+=
+'
+20
+:
+20
+:
+00
+.
+001
+'
+;
+input
+.
+value
+=
+'
+20
+:
+20
+'
+;
+checkValidity
+(
+input
+false
+apply
+apply
+)
+;
+input
+.
+value
+=
+'
+00
+:
+00
+'
+;
+checkValidity
+(
+input
+false
+apply
+apply
+)
+;
+input
+.
+value
+=
+'
+23
+:
+59
+'
+;
+checkValidity
+(
+input
+true
+apply
+apply
+)
+;
+input
+.
+value
+=
+'
+20
+:
+20
+:
+01
+'
+;
+checkValidity
+(
+input
+true
+apply
+apply
+)
+;
+input
+.
+value
+=
+'
+20
+:
+20
+:
+00
+.
+01
+'
+;
+checkValidity
+(
+input
+true
+apply
+apply
+)
+;
+input
+.
+value
+=
+'
+20
+:
+20
+:
+00
+.
+1
+'
+;
+checkValidity
+(
+input
+true
+apply
+apply
+)
+;
+input
+.
+min
+=
+'
+00
+:
+00
+:
+00
+'
+;
+input
+.
+value
+=
+'
+01
+:
+00
+'
+;
+checkValidity
+(
+input
+true
+apply
+apply
+)
+;
+input
+.
+value
+=
+'
+00
+:
+00
+:
+00
+.
+000
+'
+;
+checkValidity
+(
+input
+true
+apply
+apply
+)
+;
+input
+.
+min
+=
+'
+'
+;
+checkValidity
+(
+input
+true
+apply
+false
+)
+;
+input
+.
+min
+=
+'
+foo
+'
+;
+checkValidity
+(
+input
+true
+apply
+false
+)
+;
+break
+;
+default
+:
+ok
+(
+false
+'
+write
+tests
+for
+'
++
+input
+.
+type
 )
 ;
 }
