--- a/content/html/content/test/forms/test_input_typing_sanitization.html
+++ b/content/html/content/test/forms/test_input_typing_sanitization.html
@@ -264,8 +264,55 @@ type
 application
 /
 javascript
+;
+version
+=
+1
+.
+7
 "
 >
+/
+*
+*
+This
+test
+checks
+that
+when
+a
+user
+types
+in
+some
+input
+types
+it
+will
+not
+be
+*
+in
+a
+state
+where
+the
+value
+will
+be
+un
+-
+sanitized
+and
+usable
+(
+by
+a
+script
+)
+.
+*
+/
 var
 input
 =
@@ -312,8 +359,385 @@ testData
 ]
 ;
 var
-validData
+gValidData
 =
+[
+]
+;
+var
+gInvalidData
+=
+[
+]
+;
+function
+submitForm
+(
+)
+{
+form
+.
+submit
+(
+)
+;
+}
+function
+sendKeyEventToSubmitForm
+(
+)
+{
+sendKey
+(
+"
+return
+"
+)
+;
+}
+function
+urlify
+(
+aStr
+)
+{
+return
+aStr
+.
+replace
+(
+'
+:
+'
+'
+%
+3A
+'
+'
+g
+'
+)
+;
+}
+function
+checkValueSubmittedIsValid
+(
+)
+{
+is
+(
+frames
+[
+'
+submit_frame
+'
+]
+.
+location
+.
+href
+'
+http
+:
+/
+/
+mochi
+.
+test
+:
+8888
+/
+tests
+/
+content
+/
+html
+/
+content
+/
+test
+/
+forms
+/
+foo
+?
+i
+=
+'
++
+urlify
+(
+gValidData
+[
+valueIndex
++
++
+]
+)
+"
+The
+submitted
+value
+should
+not
+have
+been
+sanitized
+"
+)
+;
+input
+.
+value
+=
+"
+"
+;
+if
+(
+valueIndex
+>
+=
+gValidData
+.
+length
+)
+{
+valueIndex
+=
+0
+;
+submitFrame
+.
+onload
+=
+checkValueSubmittedIsInvalid
+;
+testData
+=
+gInvalidData
+;
+}
+testSubmissions
+(
+)
+;
+}
+function
+checkValueSubmittedIsInvalid
+(
+)
+{
+is
+(
+frames
+[
+'
+submit_frame
+'
+]
+.
+location
+.
+href
+'
+http
+:
+/
+/
+mochi
+.
+test
+:
+8888
+/
+tests
+/
+content
+/
+html
+/
+content
+/
+test
+/
+forms
+/
+foo
+?
+i
+=
+'
+"
+The
+submitted
+value
+should
+have
+been
+sanitized
+"
+)
+;
+valueIndex
++
++
+;
+input
+.
+value
+=
+"
+"
+;
+if
+(
+valueIndex
+>
+=
+gInvalidData
+.
+length
+)
+{
+if
+(
+submitMethod
+=
+=
+sendKeyEventToSubmitForm
+)
+{
+try
+{
+testRunner
+.
+next
+(
+)
+;
+}
+catch
+(
+e
+)
+{
+if
+(
+e
+.
+toString
+(
+)
+=
+=
+'
+[
+object
+StopIteration
+]
+'
+)
+{
+SimpleTest
+.
+finish
+(
+)
+;
+}
+else
+{
+throw
+StopIteration
+;
+}
+}
+return
+;
+}
+valueIndex
+=
+0
+;
+submitMethod
+=
+sendKeyEventToSubmitForm
+;
+submitFrame
+.
+onload
+=
+checkValueSubmittedIsValid
+;
+testData
+=
+gValidData
+;
+}
+testSubmissions
+(
+)
+;
+}
+function
+testSubmissions
+(
+)
+{
+SpecialPowers
+.
+focus
+(
+input
+)
+;
+sendString
+(
+testData
+[
+valueIndex
+]
+)
+;
+submitMethod
+(
+)
+;
+}
+var
+valueIndex
+=
+0
+;
+var
+submitMethod
+=
+submitForm
+;
+SimpleTest
+.
+waitForExplicitFinish
+(
+)
+;
+function
+runTest
+(
+)
+{
+var
+data
+=
+[
+{
+type
+:
+'
+number
+'
+validData
+:
 [
 "
 42
@@ -381,10 +805,8 @@ instead
 of
 e
 ]
-;
-var
 invalidData
-=
+:
 [
 "
 e
@@ -417,335 +839,322 @@ a
 decimal
 separator
 ]
-;
-function
-submitForm
-(
-)
-{
-form
-.
-submit
-(
-)
-;
 }
-function
-sendKeyEventToSubmitForm
-(
-)
 {
-sendKey
-(
-"
-return
-"
-)
-;
-}
-function
-checkValueSubmittedIsValid
-(
-)
-{
-is
-(
-frames
+type
+:
+'
+date
+'
+validData
+:
 [
 '
-submit_frame
+0001
+-
+01
+-
+01
+'
+'
+2012
+-
+12
+-
+21
+'
+'
+2013
+-
+01
+-
+28
+'
+'
+100000
+-
+01
+-
+01
 '
 ]
-.
-location
-.
-href
-'
-http
-:
-/
-/
-mochi
-.
-test
-:
-8888
-/
-tests
-/
-content
-/
-html
-/
-content
-/
-test
-/
-forms
-/
-foo
-?
-i
-=
-'
-+
-validData
-[
-valueIndex
-+
-+
-]
-"
-The
-submitted
-value
-should
-not
-have
-been
-sanitized
-"
-)
-;
-input
-.
-value
-=
-"
-"
-;
-if
-(
-valueIndex
->
-=
-validData
-.
-length
-)
-{
-valueIndex
-=
-0
-;
-submitFrame
-.
-onload
-=
-checkValueSubmittedIsInvalid
-;
-testData
-=
 invalidData
-;
-}
-submitNextValue
-(
-)
-;
-}
-function
-checkValueSubmittedIsInvalid
-(
-)
-{
-is
-(
-frames
+:
 [
 '
-submit_frame
+1
+-
+01
+-
+01
+'
+'
+a
+'
+'
+-
+'
+'
+2012
+-
+01
+'
+'
+2013
+-
+01
+-
+1
+'
+'
+1011
+-
+23
+-
+21
+'
+'
+1000
+-
+12
+-
+99
 '
 ]
-.
-location
-.
-href
-'
-http
-:
-/
-/
-mochi
-.
-test
-:
-8888
-/
-tests
-/
-content
-/
-html
-/
-content
-/
-test
-/
-forms
-/
-foo
-?
-i
-=
-'
-"
-The
-submitted
-value
-should
-have
-been
-sanitized
-"
-)
-;
-valueIndex
-+
-+
-;
-input
-.
-value
-=
-"
-"
-;
-if
-(
-valueIndex
->
-=
-invalidData
-.
-length
-)
-{
-if
-(
-submitMethod
-=
-=
-sendKeyEventToSubmitForm
-)
-{
-SimpleTest
-.
-finish
-(
-)
-;
-return
-;
 }
-valueIndex
-=
-0
-;
-submitMethod
-=
-sendKeyEventToSubmitForm
-;
-submitFrame
-.
-onload
-=
-checkValueSubmittedIsValid
-;
-testData
-=
+{
+type
+:
+'
+time
+'
 validData
-;
-}
-submitNextValue
-(
-)
-;
-}
-function
-submitNextValue
-(
-)
-{
-SpecialPowers
-.
-focus
-(
-input
-)
-;
-sendString
-(
-testData
-[
-valueIndex
-]
-)
-;
-submitMethod
-(
-)
-;
-}
-var
-valueIndex
-=
-0
-;
-var
-submitMethod
-=
-submitForm
-;
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
-addLoadEvent
-(
-function
-(
-)
-{
-SpecialPowers
-.
-pushPrefEnv
-(
-{
-'
-set
-'
 :
 [
-[
-"
-dom
+'
+00
+:
+00
+'
+'
+09
+:
+09
+:
+00
+'
+'
+08
+:
+23
+:
+23
 .
-experimental_forms
-"
+1
+'
+'
+21
+:
+43
+:
+56
+.
+12
+'
+'
+23
+:
+12
+:
+45
+.
+100
+'
+]
+invalidData
+:
+[
+'
+00
+:
+'
+'
+00
+:
+00
+:
+'
+'
+25
+:
+00
+'
+'
+-
+00
+:
+00
+'
+'
+00
+:
+00
+:
+00
+.
+'
+'
+00
+:
+60
+'
+'
+10
+:
+58
+:
+99
+'
+'
+:
+19
+:
+10
+'
+'
+23
+:
+08
+:
+09
+.
+1012
+'
+]
+}
+{
+type
+:
+'
+week
+'
+todo
+:
 true
-]
-]
 }
-function
+{
+type
+:
+'
+month
+'
+todo
+:
+true
+}
+{
+type
+:
+'
+datetime
+'
+todo
+:
+true
+}
+{
+type
+:
+'
+datetime
+-
+local
+'
+todo
+:
+true
+}
+{
+type
+:
+'
+color
+'
+todo
+:
+true
+}
+]
+;
+for
 (
+test
+of
+data
+)
+{
+if
+(
+test
+.
+todo
 )
 {
 input
 .
 type
 =
+test
+.
+type
+;
+todo_is
+(
+input
+.
+type
+test
+.
+type
+test
+.
+type
++
 "
-number
+is
+not
+implemented
 "
+)
+;
+continue
+;
+}
+input
+.
+type
+=
+test
+.
+type
+;
+gValidData
+=
+test
+.
+validData
+;
+gInvalidData
+=
+test
+.
+invalidData
 ;
 for
 (
 data
 of
-validData
+gValidData
 )
 {
 input
@@ -795,7 +1204,7 @@ for
 (
 data
 of
-invalidData
+gInvalidData
 )
 {
 input
@@ -841,9 +1250,20 @@ sanitized
 )
 ;
 }
+input
+.
+value
+=
+'
+'
+;
 testData
 =
-validData
+gValidData
+;
+valueIndex
+=
+0
 ;
 submitFrame
 .
@@ -851,7 +1271,54 @@ onload
 =
 checkValueSubmittedIsValid
 ;
-submitNextValue
+testSubmissions
+(
+)
+;
+yield
+;
+}
+}
+var
+testRunner
+=
+runTest
+(
+)
+;
+addLoadEvent
+(
+function
+(
+)
+{
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+'
+set
+'
+:
+[
+[
+"
+dom
+.
+experimental_forms
+"
+true
+]
+]
+}
+function
+(
+)
+{
+testRunner
+.
+next
 (
 )
 ;
