--- a/docshell/test/test_bug94514.html
+++ b/docshell/test/test_bug94514.html
@@ -181,13 +181,9 @@ test
 /
 tests
 /
-toolkit
+docshell
 /
-components
-/
-places
-/
-tests
+test
 /
 bug94514
 -
@@ -234,27 +230,6 @@ Ci
 Components
 .
 interfaces
-;
-Components
-.
-utils
-.
-import
-(
-"
-resource
-:
-/
-/
-gre
-/
-modules
-/
-PlacesUtils
-.
-jsm
-"
-)
 ;
 var
 ios
@@ -308,9 +283,95 @@ null
 )
 ;
 var
-w
+gh
 =
-null
+Cc
+[
+"
+mozilla
+.
+org
+/
+browser
+/
+global
+-
+history
+;
+2
+"
+]
+.
+getService
+(
+Ci
+.
+nsIGlobalHistory2
+)
+;
+SimpleTest
+.
+ok
+(
+!
+gh
+.
+isVisited
+(
+startPage
+)
+"
+Initial
+page
+does
+not
+start
+in
+global
+history
+.
+Note
+:
+"
++
+"
+this
+will
+also
+fail
+if
+you
+run
+the
+test
+twice
+.
+"
+)
+;
+SimpleTest
+.
+ok
+(
+!
+gh
+.
+isVisited
+(
+postedPage
+)
+"
+Posted
+page
+does
+not
+start
+in
+global
+history
+.
+"
+)
 ;
 /
 /
@@ -440,86 +501,7 @@ saved
 false
 )
 ;
-PlacesUtils
-.
-asyncHistory
-.
-isURIVisited
-(
-startPage
-function
-(
-aURI
-aIsVisited
-)
-{
-SimpleTest
-.
-ok
-(
-!
-aIsVisited
-"
-Initial
-page
-does
-not
-start
-in
-global
-history
-.
-"
-+
-"
-Note
-:
-this
-will
-also
-fail
-if
-you
-run
-the
-test
-twice
-.
-"
-)
-;
-PlacesUtils
-.
-asyncHistory
-.
-isURIVisited
-(
-postedPage
-function
-(
-aURI
-aIsVisited
-)
-{
-SimpleTest
-.
-ok
-(
-!
-aIsVisited
-"
-Posted
-page
-does
-not
-start
-in
-global
-history
-.
-"
-)
-;
+var
 w
 =
 window
@@ -537,12 +519,6 @@ height
 =
 10
 "
-)
-;
-}
-)
-;
-}
 )
 ;
 function
@@ -565,24 +541,16 @@ to
 global
 history
 .
-PlacesUtils
-.
-asyncHistory
-.
-isURIVisited
-(
-startPage
-function
-(
-aURI
-aIsVisited
-)
-{
 SimpleTest
 .
 ok
 (
-aIsVisited
+gh
+.
+isVisited
+(
+startPage
+)
 "
 Initial
 page
@@ -595,25 +563,17 @@ history
 "
 )
 ;
-PlacesUtils
-.
-asyncHistory
-.
-isURIVisited
-(
-postedPage
-function
-(
-aURI
-aIsVisited
-)
-{
 SimpleTest
 .
 ok
 (
 !
-aIsVisited
+gh
+.
+isVisited
+(
+postedPage
+)
 "
 Posted
 page
@@ -637,12 +597,6 @@ SimpleTest
 .
 finish
 (
-)
-;
-}
-)
-;
-}
 )
 ;
 }
