bug 837028 - Add logging statements for basic peer connection tests. r=jesup
UltraBlame original commit: 4444d9e3af9a24af8f4081eacc3148756c76a802

--- a/dom/media/tests/mochitest/test_peerConnection_basicAudioVideo.html
+++ b/dom/media/tests/mochitest/test_peerConnection_basicAudioVideo.html
@@ -438,6 +438,19 @@ function
 aObj
 )
 {
+info
+(
+"
+Local
+Peer
+Connection
+onaddstream
+has
+been
+called
+"
+)
+;
 test_data
 .
 pcLocal
@@ -474,6 +487,19 @@ function
 aObj
 )
 {
+info
+(
+"
+Remote
+Peer
+Connection
+onaddstream
+has
+been
+called
+"
+)
+;
 test_data
 .
 pcRemote
@@ -519,6 +545,21 @@ onSuccess
 aLocalAudioInputStream
 )
 {
+info
+(
+"
+Calling
+addStream
+on
+local
+peer
+connection
+with
+audio
+stream
+"
+)
+;
 pcLocal
 .
 addStream
@@ -556,6 +597,21 @@ onSuccess
 aLocalVideoInputStream
 )
 {
+info
+(
+"
+Calling
+addStream
+on
+local
+peer
+connection
+with
+video
+stream
+"
+)
+;
 pcLocal
 .
 addStream
@@ -593,6 +649,21 @@ onSuccess
 aRemoteAudioInputStream
 )
 {
+info
+(
+"
+Calling
+addStream
+on
+remote
+peer
+connection
+with
+audio
+stream
+"
+)
+;
 pcRemote
 .
 addStream
@@ -618,6 +689,21 @@ onSuccess
 aRemoteVideoInputStream
 )
 {
+info
+(
+"
+Calling
+addStream
+on
+remote
+peer
+connection
+with
+video
+stream
+"
+)
+;
 pcRemote
 .
 addStream
@@ -635,6 +721,16 @@ function
 (
 )
 {
+info
+(
+"
+Finished
+peer
+connection
+handshake
+"
+)
+;
 is
 (
 pcLocal
@@ -862,10 +958,36 @@ disconnect
 (
 )
 {
+info
+(
+"
+Calling
+close
+on
+the
+local
+peer
+connection
+"
+)
+;
 pcLocal
 .
 close
 (
+)
+;
+info
+(
+"
+Calling
+close
+on
+the
+remote
+peer
+connection
+"
 )
 ;
 pcRemote
