--- a/dom/media/tests/mochitest/test_peerConnection_basicAudio.html
+++ b/dom/media/tests/mochitest/test_peerConnection_basicAudio.html
@@ -353,6 +353,19 @@ function
 aObj
 )
 {
+info
+(
+"
+Local
+Peer
+Connection
+onaddstream
+has
+been
+called
+"
+)
+;
 test_data
 .
 pcLocal
@@ -389,6 +402,19 @@ function
 aObj
 )
 {
+info
+(
+"
+Remote
+Peer
+Connection
+onaddstream
+has
+been
+called
+"
+)
+;
 test_data
 .
 pcRemote
@@ -434,6 +460,18 @@ onSuccess
 aLocalInputStream
 )
 {
+info
+(
+"
+Calling
+addStream
+on
+local
+peer
+connection
+"
+)
+;
 pcLocal
 .
 addStream
@@ -459,6 +497,18 @@ onSuccess
 aRemoteInputStream
 )
 {
+info
+(
+"
+Calling
+addStream
+on
+remote
+peer
+connection
+"
+)
+;
 pcRemote
 .
 addStream
@@ -488,6 +538,16 @@ function
 (
 )
 {
+info
+(
+"
+Finished
+peer
+connection
+handshake
+"
+)
+;
 is
 (
 pcLocal
@@ -666,10 +726,36 @@ disconnect
 (
 )
 {
+info
+(
+"
+Calling
+close
+on
+the
+local
+peer
+connection
+"
+)
+;
 pcLocal
 .
 close
 (
+)
+;
+info
+(
+"
+Calling
+close
+on
+the
+remote
+peer
+connection
+"
 )
 ;
 pcRemote
