--- a/dom/media/tests/mochitest/test_peerConnection_basicAudioVideoCombined.html
+++ b/dom/media/tests/mochitest/test_peerConnection_basicAudioVideoCombined.html
@@ -410,6 +410,19 @@ function
 aObj
 )
 {
+info
+(
+"
+Local
+Peer
+Connection
+onaddstream
+has
+been
+called
+"
+)
+;
 test_data
 .
 pcLocal
@@ -446,6 +459,19 @@ function
 aObj
 )
 {
+info
+(
+"
+Remote
+Peer
+Connection
+onaddstream
+has
+been
+called
+"
+)
+;
 test_data
 .
 pcRemote
@@ -494,6 +520,18 @@ onSuccess
 aLocalInputStream
 )
 {
+info
+(
+"
+Calling
+addStream
+on
+local
+peer
+connection
+"
+)
+;
 pcLocal
 .
 addStream
@@ -522,6 +560,18 @@ onSuccess
 aRemoteInputStream
 )
 {
+info
+(
+"
+Calling
+addStream
+on
+remote
+peer
+connection
+"
+)
+;
 pcRemote
 .
 addStream
@@ -551,6 +601,16 @@ function
 (
 )
 {
+info
+(
+"
+Finished
+peer
+connection
+handshake
+"
+)
+;
 is
 (
 pcLocal
@@ -771,10 +831,36 @@ disconnect
 (
 )
 {
+info
+(
+"
+Calling
+close
+on
+the
+local
+peer
+connection
+"
+)
+;
 pcLocal
 .
 close
 (
+)
+;
+info
+(
+"
+Calling
+close
+on
+the
+remote
+peer
+connection
+"
 )
 ;
 pcRemote
