--- a/dom/media/tests/mochitest/test_peerConnection_basicVideo.html
+++ b/dom/media/tests/mochitest/test_peerConnection_basicVideo.html
@@ -383,6 +383,19 @@ function
 aObj
 )
 {
+info
+(
+"
+Local
+Peer
+Connection
+onaddstream
+has
+been
+called
+"
+)
+;
 test_data
 .
 pcLocal
@@ -419,6 +432,19 @@ function
 aObj
 )
 {
+info
+(
+"
+Remote
+Peer
+Connection
+onaddstream
+has
+been
+called
+"
+)
+;
 test_data
 .
 pcRemote
@@ -464,6 +490,18 @@ onSuccess
 aLocalInputStream
 )
 {
+info
+(
+"
+Calling
+addStream
+on
+local
+peer
+connection
+"
+)
+;
 pcLocal
 .
 addStream
@@ -489,6 +527,18 @@ onSuccess
 aRemoteInputStream
 )
 {
+info
+(
+"
+Calling
+addStream
+on
+remote
+peer
+connection
+"
+)
+;
 pcRemote
 .
 addStream
@@ -518,6 +568,16 @@ function
 (
 )
 {
+info
+(
+"
+Finished
+peer
+connection
+handshake
+"
+)
+;
 is
 (
 pcLocal
@@ -696,10 +756,36 @@ disconnect
 (
 )
 {
+info
+(
+"
+Calling
+close
+on
+the
+local
+peer
+connection
+"
+)
+;
 pcLocal
 .
 close
 (
+)
+;
+info
+(
+"
+Calling
+close
+on
+the
+remote
+peer
+connection
+"
 )
 ;
 pcRemote
