Bug 835075 - Modify the mochitest. r=padenot
UltraBlame original commit: ed2cb7a3df549cff0535e6379035f1225d283e6f

--- a/content/media/test/test_reset_src.html
+++ b/content/media/test/test_reset_src.html
@@ -452,6 +452,30 @@ mozFrameDelay
 "
 )
 ;
+if
+(
+v
+.
+_firstTime
+)
+{
+t
+.
+src
+=
+t
+.
+src
+;
+v
+.
+_firstTime
+=
+false
+;
+}
+else
+{
 var
 source
 =
@@ -513,6 +537,7 @@ source
 .
 name
 ;
+}
 }
 }
 function
@@ -596,6 +621,12 @@ video
 0
 ]
 ;
+v
+.
+_firstTime
+=
+true
+;
 var
 source
 =
@@ -641,13 +672,6 @@ src
 source
 .
 name
-;
-dump
-(
-source
-.
-name
-)
 ;
 SimpleTest
 .
