Bug 804875 - Change the test, because mozFrameDelay can be 0, on a CLOSED TREE.
UltraBlame original commit: 6320dce4900ed89c1491a4f793596cce994ace0a

--- a/content/media/test/test_reset_src.html
+++ b/content/media/test/test_reset_src.html
@@ -205,12 +205,15 @@ t
 videoHeight
 0
 "
-Audio
-should
-a
-zero
-for
 videoHeight
+should
+be
+zero
+when
+there
+is
+no
+video
 .
 "
 )
@@ -222,12 +225,15 @@ t
 videoWidth
 0
 "
-Audio
-should
-a
-zero
-for
 videoWidth
+should
+be
+zero
+when
+there
+is
+no
+video
 .
 "
 )
@@ -239,12 +245,15 @@ t
 mozPaintedFrames
 0
 "
-Audio
-should
-a
-zero
-for
 mozPaintedFrames
+should
+be
+zero
+when
+there
+is
+no
+video
 .
 "
 )
@@ -256,12 +265,15 @@ t
 mozFrameDelay
 0
 "
-Audio
-should
-a
-zero
-for
 mozFrameDelay
+should
+be
+zero
+when
+there
+is
+no
+video
 .
 "
 )
@@ -434,12 +446,15 @@ t
 .
 mozFrameDelay
 >
+=
 0
 "
 mozFrameDelay
 should
 be
 positive
+or
+zero
 is
 "
 +
