Bug 835954 - Update pdf.js to version 0.7.180. r=yury
UltraBlame original commit: af8e5720ccf297c2c222c6c2071bbc97dae1a3a9

--- a/browser/extensions/pdfjs/content/web/viewer.html
+++ b/browser/extensions/pdfjs/content/web/viewer.html
@@ -10,6 +10,7 @@ dir
 "
 ltr
 "
+mozdisallowselectionprint
 >
 <
 head
@@ -775,7 +776,7 @@ l10n
 id
 =
 "
-toggle_slider
+toggle_sidebar
 "
 >
 <
@@ -787,7 +788,7 @@ l10n
 id
 =
 "
-toggle_slider_label
+toggle_sidebar_label
 "
 >
 Toggle
