Bug 838318 - Crashtest 791330.html timeout because of missing try/catch. r=jesup
UltraBlame original commit: 10cc1470a974ab9f29a662f91139d5f21cca7dfb

--- a/dom/media/tests/crashtests/791330.html
+++ b/dom/media/tests/crashtests/791330.html
@@ -102,6 +102,8 @@ function
 stream
 )
 {
+try
+{
 pc
 .
 addStream
@@ -121,10 +123,20 @@ offer
 }
 )
 ;
+}
+finally
+{
+stream
+.
+stop
+(
+)
+;
 finish
 (
 )
 ;
+}
 }
 function
 (
