Bug 836952 - accept coordinates for single_tap/double_tap, r=mdas
UltraBlame original commit: 53c091a119ed634a0c44f6dc964d6e4bec0f1630

--- a/testing/marionette/client/marionette/www/testTouch.html
+++ b/testing/marionette/client/marionette/www/testTouch.html
@@ -194,6 +194,32 @@ Clicked
 "
 ;
 }
+function
+clicked3
+(
+)
+{
+var
+link3
+=
+document
+.
+getElementById
+(
+"
+mozLinkPos
+"
+)
+;
+link3
+.
+innerHTML
+=
+"
+Clicked
+"
+;
+}
 <
 /
 script
@@ -204,6 +230,22 @@ id
 =
 "
 mozLink
+"
+style
+=
+"
+position
+:
+absolute
+;
+left
+:
+0px
+;
+top
+:
+55px
+;
 "
 type
 =
@@ -223,6 +265,51 @@ true
 >
 Click
 Me
+!
+<
+/
+button
+>
+<
+button
+id
+=
+"
+mozLinkPos
+"
+style
+=
+"
+position
+:
+absolute
+;
+left
+:
+0px
+;
+top
+:
+355px
+;
+"
+type
+=
+"
+button
+"
+onclick
+=
+"
+clicked3
+(
+)
+"
+allowevents
+=
+true
+>
+Position
 !
 <
 /
