Bug 836850.  Allow a single C++ class to implement multiple WebIDL interfaces.  r=peterv
UltraBlame original commit: d32064860f36bbc48e34ceb712f08860d2ad7ed9

--- a/dom/tests/mochitest/bugs/test_bug396843.html
+++ b/dom/tests/mochitest/bugs/test_bug396843.html
@@ -526,7 +526,7 @@ HTML_TAG
 dl
 "
 "
-DList
+SharedList
 "
 )
 HTML_TAG
@@ -904,7 +904,7 @@ HTML_TAG
 ol
 "
 "
-OList
+SharedList
 "
 )
 HTML_TAG
@@ -1183,7 +1183,7 @@ HTML_TAG
 ul
 "
 "
-UList
+SharedList
 "
 )
 HTML_TAG
