--- a/content/html/content/test/forms/test_button_attributes_reflection.html
+++ b/content/html/content/test/forms/test_button_attributes_reflection.html
@@ -14,8 +14,9 @@ title
 >
 Test
 for
-Bug
-551670
+HTMLButtonElement
+attributes
+reflection
 <
 /
 title
@@ -106,42 +107,6 @@ head
 body
 >
 <
-a
-target
-=
-"
-_blank
-"
-href
-=
-"
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-551670
-"
->
-Mozilla
-Bug
-551670
-<
-/
-a
->
-<
 p
 id
 =
@@ -195,11 +160,373 @@ javascript
 *
 Test
 for
-Bug
-551670
+HTMLButtonElement
+attributes
+reflection
 *
 *
 /
+/
+/
+.
+autofocus
+reflectBoolean
+(
+{
+element
+:
+document
+.
+createElement
+(
+"
+button
+"
+)
+attribute
+:
+"
+autofocus
+"
+}
+)
+;
+/
+/
+.
+disabled
+reflectBoolean
+(
+{
+element
+:
+document
+.
+createElement
+(
+"
+button
+"
+)
+attribute
+:
+"
+disabled
+"
+}
+)
+;
+/
+/
+TODO
+:
+formAction
+(
+URL
+)
+.
+But
+note
+that
+we
+currently
+reflect
+it
+weirdly
+;
+see
+/
+/
+content
+/
+html
+/
+content
+/
+test
+/
+test_bug607145
+.
+html
+/
+/
+.
+formEnctype
+reflectLimitedEnumerated
+(
+{
+element
+:
+document
+.
+createElement
+(
+"
+button
+"
+)
+attribute
+:
+"
+formEnctype
+"
+validValues
+:
+[
+"
+application
+/
+x
+-
+www
+-
+form
+-
+urlencoded
+"
+"
+multipart
+/
+form
+-
+data
+"
+"
+text
+/
+plain
+"
+]
+invalidValues
+:
+[
+"
+text
+/
+html
+"
+"
+"
+"
+tulip
+"
+]
+/
+/
+TODO
+(
+Bug
+839171
+)
+:
+/
+/
+defaultValue
+:
+{
+/
+/
+invalid
+:
+"
+application
+/
+x
+-
+www
+-
+form
+-
+urlencoded
+"
+/
+/
+missing
+:
+"
+"
+/
+/
+}
+defaultValue
+:
+"
+application
+/
+x
+-
+www
+-
+form
+-
+urlencoded
+"
+}
+)
+;
+/
+/
+.
+formMethod
+reflectLimitedEnumerated
+(
+{
+element
+:
+document
+.
+createElement
+(
+"
+button
+"
+)
+attribute
+:
+"
+formMethod
+"
+validValues
+:
+[
+"
+get
+"
+"
+post
+"
+]
+invalidValues
+:
+[
+"
+put
+"
+"
+"
+"
+tulip
+"
+]
+unsupportedValues
+:
+[
+"
+dialog
+"
+]
+/
+/
+TODO
+(
+Bug
+839171
+)
+:
+/
+/
+defaultValue
+:
+{
+/
+/
+invalid
+:
+"
+get
+"
+/
+/
+missing
+:
+"
+"
+/
+/
+}
+defaultValue
+:
+"
+get
+"
+}
+)
+;
+/
+/
+.
+formNoValidate
+reflectBoolean
+(
+{
+element
+:
+document
+.
+createElement
+(
+"
+button
+"
+)
+attribute
+:
+"
+formNoValidate
+"
+}
+)
+;
+/
+/
+.
+formTarget
+reflectString
+(
+{
+element
+:
+document
+.
+createElement
+(
+"
+button
+"
+)
+attribute
+:
+"
+formTarget
+"
+}
+)
+;
+/
+/
+.
+name
+reflectString
+(
+{
+element
+:
+document
+.
+createElement
+(
+"
+button
+"
+)
+attribute
+:
+"
+name
+"
+}
+)
+;
 /
 /
 .
@@ -257,6 +584,13 @@ type
 tulip
 "
 ]
+unsupportedValues
+:
+[
+"
+menu
+"
+]
 defaultValue
 :
 "
@@ -268,8 +602,8 @@ submit
 /
 /
 .
-formNoValidate
-reflectBoolean
+value
+reflectString
 (
 {
 element
@@ -285,7 +619,7 @@ button
 attribute
 :
 "
-formNoValidate
+value
 "
 }
 )
