Bug 838407 - aria-hidden false value shouldn't be exposed via object attributes, r=tbsaunde
UltraBlame original commit: 80fa2c61df149c573ac85dd82e5c0ae9387fff14

--- a/accessible/tests/mochitest/attributes/test_obj.html
+++ b/accessible/tests/mochitest/attributes/test_obj.html
@@ -335,6 +335,22 @@ true
 true
 )
 ;
+testAbsentAttrs
+(
+"
+hidden_false
+"
+{
+"
+hidden
+"
+:
+"
+false
+"
+}
+)
+;
 testAttrs
 (
 "
@@ -1784,6 +1800,59 @@ Bug
 a
 >
 <
+a
+target
+=
+"
+_blank
+"
+href
+=
+"
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+838407
+"
+title
+=
+"
+aria
+-
+hidden
+false
+value
+shouldn
+'
+t
+be
+exposed
+via
+object
+attributes
+"
+>
+Mozilla
+Bug
+838407
+<
+/
+a
+>
+<
 p
 id
 =
@@ -2057,6 +2126,25 @@ hidden
 =
 "
 true
+"
+>
+<
+/
+div
+>
+<
+div
+id
+=
+"
+hidden_false
+"
+aria
+-
+hidden
+=
+"
+false
 "
 >
 <
