Bug 839867 - Align gecko with the spec on cross-origin access to Location.hash. r=bz
We update the tests to cover this case. There was also a bug in the tests where
we were accidentally testing non-writable Location properties against window
rather than window.location. :-(

UltraBlame original commit: 1c2e7ae47afcdb65aea913365be867abf7327a8a

--- a/content/base/test/file_bug326337_inner.html
+++ b/content/base/test/file_bug326337_inner.html
@@ -200,7 +200,12 @@ if
 secondDoc
 )
 {
+SpecialPowers
+.
+wrap
+(
 parent
+)
 .
 location
 .
@@ -245,7 +250,12 @@ yes
 "
 )
 {
+SpeciaPowers
+.
+wrap
+(
 parent
+)
 .
 location
 .
