Bug 838160 - Part c: Add a test for HTMLOutputElement.name reflection; r=bz
UltraBlame original commit: 5bcde0a780ef0feae369a1d97496122eedd1b9ac

--- a/content/html/content/test/forms/test_output_element.html
+++ b/content/html/content/test/forms/test_output_element.html
@@ -333,19 +333,16 @@ checkNameAttribute
 element
 )
 {
-function
-nameAttributeEquals
-(
-element
-expectedValue
-)
-{
 is
 (
 element
 .
 name
-expectedValue
+"
+output
+-
+name
+"
 "
 Output
 name
@@ -367,7 +364,11 @@ getAttribute
 name
 '
 )
-expectedValue
+"
+output
+-
+name
+"
 "
 Output
 name
@@ -376,65 +377,6 @@ attribute
 is
 not
 correct
-"
-)
-;
-}
-nameAttributeEquals
-(
-element
-"
-output
--
-name
-"
-)
-;
-element
-.
-name
-=
-"
-new
--
-name
-"
-;
-nameAttributeEquals
-(
-element
-"
-new
--
-name
-"
-)
-;
-element
-.
-setAttribute
-(
-'
-name
-'
-'
-new
--
-name
--
-2
-'
-)
-;
-nameAttributeEquals
-(
-element
-"
-new
--
-name
--
-2
 "
 )
 ;
@@ -1164,6 +1106,27 @@ function
 (
 )
 {
+reflectString
+(
+{
+element
+:
+document
+.
+createElement
+(
+"
+output
+"
+)
+attribute
+:
+"
+name
+"
+}
+)
+;
 var
 o
 =
