--- a/content/html/content/test/forms/test_output_element.html
+++ b/content/html/content/test/forms/test_output_element.html
@@ -47,6 +47,30 @@ js
 script
 >
 <
+script
+type
+=
+"
+application
+/
+javascript
+"
+src
+=
+"
+.
+.
+/
+reflect
+.
+js
+"
+>
+<
+/
+script
+>
+<
 link
 rel
 =
