Bug 822109 - Add a bunch of basic functional tests for getUserMedia and enable a per config setting for those tests for fake vs. non-fake. r=jesup
UltraBlame original commit: 9e3a4589e251469070da5e605d08a54f86973e48

--- a/dom/media/tests/mochitest/test_getUserMedia_basicAudio.html
+++ b/dom/media/tests/mochitest/test_getUserMedia_basicAudio.html
@@ -281,15 +281,10 @@ testAudio
 '
 )
 ;
-navigator
-.
-mozGetUserMedia
+getUserMedia
 (
 {
 audio
-:
-true
-fake
 :
 true
 }
@@ -302,7 +297,7 @@ var
 playback
 =
 new
-MediaStreamPlayback
+LocalMediaStreamPlayback
 (
 testAudio
 aStream
@@ -312,7 +307,7 @@ playback
 .
 playMedia
 (
-10000
+false
 function
 (
 )
