--- a/dom/media/tests/mochitest/test_getUserMedia_basicVideoAudio.html
+++ b/dom/media/tests/mochitest/test_getUserMedia_basicVideoAudio.html
@@ -287,18 +287,13 @@ testVideoAudio
 '
 )
 ;
-navigator
-.
-mozGetUserMedia
+getUserMedia
 (
 {
 video
 :
 true
 audio
-:
-true
-fake
 :
 true
 }
@@ -311,7 +306,7 @@ var
 playback
 =
 new
-MediaStreamPlayback
+LocalMediaStreamPlayback
 (
 testVideoAudio
 aStream
@@ -321,7 +316,7 @@ playback
 .
 playMedia
 (
-10000
+false
 function
 (
 )
