--- a/dom/media/tests/mochitest/test_getUserMedia_gumWithinGum.html
+++ b/dom/media/tests/mochitest/test_getUserMedia_gumWithinGum.html
@@ -23,9 +23,9 @@ utf
 title
 >
 mozGetUserMedia
-Basic
-Video
-Test
+gum
+within
+gum
 <
 /
 title
@@ -159,13 +159,13 @@ cgi
 ?
 id
 =
-781534
+822109
 "
 >
 mozGetUserMedia
-Basic
-Video
-Test
+gum
+within
+gum
 <
 /
 a
@@ -210,6 +210,18 @@ testVideo
 video
 >
 <
+audio
+id
+=
+"
+testAudio
+"
+>
+<
+/
+audio
+>
+<
 /
 div
 >
@@ -238,28 +250,39 @@ javascript
 Run
 a
 test
-to
-verify
 that
 we
 can
 complete
 a
-start
-and
-stop
-media
 playback
-*
 cycle
 for
-an
-video
-LocalMediaStream
-on
 a
 video
-HTMLMediaElement
+*
+then
+upon
+completion
+do
+a
+playback
+cycle
+with
+audio
+such
+that
+*
+the
+audio
+gum
+call
+happens
+within
+the
+video
+gum
+call
 .
 *
 /
@@ -267,6 +290,18 @@ runTest
 (
 function
 (
+)
+{
+getUserMedia
+(
+{
+video
+:
+true
+}
+function
+(
+videoStream
 )
 {
 var
@@ -281,29 +316,17 @@ testVideo
 '
 )
 ;
-getUserMedia
-(
-{
-video
-:
-true
-}
-function
-(
-aStream
-)
-{
 var
-playback
+videoStreamPlayback
 =
 new
 LocalMediaStreamPlayback
 (
 testVideo
-aStream
+videoStream
 )
 ;
-playback
+videoStreamPlayback
 .
 playMedia
 (
@@ -312,7 +335,56 @@ function
 (
 )
 {
-aStream
+getUserMedia
+(
+{
+audio
+:
+true
+}
+function
+(
+audioStream
+)
+{
+var
+testAudio
+=
+document
+.
+getElementById
+(
+'
+testAudio
+'
+)
+;
+var
+audioStreamPlayback
+=
+new
+LocalMediaStreamPlayback
+(
+testAudio
+audioStream
+)
+;
+audioStreamPlayback
+.
+playMedia
+(
+false
+function
+(
+)
+{
+audioStream
+.
+stop
+(
+)
+;
+videoStream
 .
 stop
 (
@@ -322,6 +394,14 @@ SimpleTest
 .
 finish
 (
+)
+;
+}
+unexpectedCallbackAndFinish
+)
+;
+}
+unexpectedCallbackAndFinish
 )
 ;
 }
