--- a/dom/media/tests/mochitest/test_getUserMedia_playAudioTwice.html
+++ b/dom/media/tests/mochitest/test_getUserMedia_playAudioTwice.html
@@ -23,9 +23,9 @@ utf
 title
 >
 mozGetUserMedia
-Basic
-Video
-Test
+Play
+Audio
+Twice
 <
 /
 title
@@ -159,13 +159,13 @@ cgi
 ?
 id
 =
-781534
+822109
 "
 >
 mozGetUserMedia
-Basic
-Video
-Test
+Play
+Audio
+Twice
 <
 /
 a
@@ -198,16 +198,16 @@ none
 "
 >
 <
-video
+audio
 id
 =
 "
-testVideo
+testAudio
 "
 >
 <
 /
-video
+audio
 >
 <
 /
@@ -238,28 +238,18 @@ javascript
 Run
 a
 test
-to
-verify
 that
 we
 can
 complete
-a
-start
-and
-stop
-media
-playback
-*
-cycle
-for
 an
-video
-LocalMediaStream
-on
+audio
+playback
+cycle
+twice
+in
 a
-video
-HTMLMediaElement
+row
 .
 *
 /
@@ -269,41 +259,41 @@ function
 (
 )
 {
+getUserMedia
+(
+{
+audio
+:
+true
+}
+function
+(
+audioStream
+)
+{
 var
-testVideo
+testAudio
 =
 document
 .
 getElementById
 (
 '
-testVideo
+testAudio
 '
 )
 ;
-getUserMedia
-(
-{
-video
-:
-true
-}
-function
-(
-aStream
-)
-{
 var
-playback
+audioStreamPlayback
 =
 new
 LocalMediaStreamPlayback
 (
-testVideo
-aStream
+testAudio
+audioStream
 )
 ;
-playback
+audioStreamPlayback
 .
 playMedia
 (
@@ -312,7 +302,16 @@ function
 (
 )
 {
-aStream
+audioStreamPlayback
+.
+playMedia
+(
+true
+function
+(
+)
+{
+audioStream
 .
 stop
 (
@@ -322,6 +321,10 @@ SimpleTest
 .
 finish
 (
+)
+;
+}
+unexpectedCallbackAndFinish
 )
 ;
 }
