--- a/dom/media/tests/mochitest/test_getUserMedia_playVideoAudioTwice.html
+++ b/dom/media/tests/mochitest/test_getUserMedia_playVideoAudioTwice.html
@@ -23,9 +23,11 @@ utf
 title
 >
 mozGetUserMedia
-Basic
+Play
 Video
-Test
+and
+Audio
+Twice
 <
 /
 title
@@ -159,13 +161,15 @@ cgi
 ?
 id
 =
-781534
+822109
 "
 >
 mozGetUserMedia
-Basic
+Play
 Video
-Test
+and
+Audio
+Twice
 <
 /
 a
@@ -238,28 +242,18 @@ javascript
 Run
 a
 test
-to
-verify
 that
 we
 can
 complete
 a
-start
-and
-stop
-media
+video
 playback
-*
 cycle
-for
-an
-video
-LocalMediaStream
-on
+twice
+in
 a
-video
-HTMLMediaElement
+row
 .
 *
 /
@@ -267,6 +261,21 @@ runTest
 (
 function
 (
+)
+{
+getUserMedia
+(
+{
+video
+:
+true
+audio
+:
+true
+}
+function
+(
+stream
 )
 {
 var
@@ -281,29 +290,17 @@ testVideo
 '
 )
 ;
-getUserMedia
-(
-{
-video
-:
-true
-}
-function
-(
-aStream
-)
-{
 var
-playback
+streamPlayback
 =
 new
 LocalMediaStreamPlayback
 (
 testVideo
-aStream
+stream
 )
 ;
-playback
+streamPlayback
 .
 playMedia
 (
@@ -312,7 +309,16 @@ function
 (
 )
 {
-aStream
+streamPlayback
+.
+playMedia
+(
+true
+function
+(
+)
+{
+stream
 .
 stop
 (
@@ -322,6 +328,10 @@ SimpleTest
 .
 finish
 (
+)
+;
+}
+unexpectedCallbackAndFinish
 )
 ;
 }
