--- a/dom/media/tests/mochitest/test_getUserMedia_playVideoTwice.html
+++ b/dom/media/tests/mochitest/test_getUserMedia_playVideoTwice.html
@@ -23,9 +23,9 @@ utf
 title
 >
 mozGetUserMedia
-Basic
+Play
 Video
-Test
+Twice
 <
 /
 title
@@ -159,13 +159,13 @@ cgi
 ?
 id
 =
-781534
+822109
 "
 >
 mozGetUserMedia
-Basic
+Play
 Video
-Test
+Twice
 <
 /
 a
@@ -238,28 +238,18 @@ javascript
 Run
 a
 test
-to
-verify
 that
 we
 can
 complete
 a
-start
-and
-stop
-media
+video
 playback
-*
 cycle
-for
-an
-video
-LocalMediaStream
-on
+twice
+in
 a
-video
-HTMLMediaElement
+row
 .
 *
 /
@@ -267,6 +257,18 @@ runTest
 (
 function
 (
+)
+{
+getUserMedia
+(
+{
+video
+:
+true
+}
+function
+(
+videoStream
 )
 {
 var
@@ -281,29 +283,17 @@ testVideo
 '
 )
 ;
-getUserMedia
-(
-{
-video
-:
-true
-}
-function
-(
-aStream
-)
-{
 var
-playback
+videoStreamPlayback
 =
 new
 LocalMediaStreamPlayback
 (
 testVideo
-aStream
+videoStream
 )
 ;
-playback
+videoStreamPlayback
 .
 playMedia
 (
@@ -312,7 +302,16 @@ function
 (
 )
 {
-aStream
+videoStreamPlayback
+.
+playMedia
+(
+true
+function
+(
+)
+{
+videoStream
 .
 stop
 (
@@ -322,6 +321,10 @@ SimpleTest
 .
 finish
 (
+)
+;
+}
+unexpectedCallbackAndFinish
 )
 ;
 }
