--- a/dom/media/tests/mochitest/test_getUserMedia_stopAudioStream.html
+++ b/dom/media/tests/mochitest/test_getUserMedia_stopAudioStream.html
@@ -23,9 +23,9 @@ utf
 title
 >
 mozGetUserMedia
-Basic
-Video
-Test
+Stop
+Audio
+Stream
 <
 /
 title
@@ -159,13 +159,13 @@ cgi
 ?
 id
 =
-781534
+822109
 "
 >
 mozGetUserMedia
-Basic
-Video
-Test
+Stop
+Audio
+Stream
 <
 /
 a
@@ -198,11 +198,11 @@ none
 "
 >
 <
-video
+audio
 id
 =
 "
-testVideo
+testAudio
 "
 >
 <
@@ -243,23 +243,29 @@ verify
 that
 we
 can
-complete
-a
 start
-and
-stop
-media
-playback
-*
-cycle
-for
 an
-video
-LocalMediaStream
-on
+audio
+stream
+in
 a
-video
-HTMLMediaElement
+media
+element
+*
+call
+stop
+(
+)
+on
+the
+stream
+and
+successfully
+get
+an
+ended
+event
+fired
 .
 *
 /
@@ -269,62 +275,48 @@ function
 (
 )
 {
+getUserMedia
+(
+{
+audio
+:
+true
+}
+function
+(
+stream
+)
+{
 var
-testVideo
+testAudio
 =
 document
 .
 getElementById
 (
 '
-testVideo
+testAudio
 '
 )
 ;
-getUserMedia
-(
-{
-video
-:
-true
-}
-function
-(
-aStream
-)
-{
 var
-playback
+audioStreamPlayback
 =
 new
 LocalMediaStreamPlayback
 (
-testVideo
-aStream
+testAudio
+stream
 )
 ;
-playback
+audioStreamPlayback
 .
-playMedia
+playMediaWithStreamStop
 (
 false
-function
-(
-)
-{
-aStream
-.
-stop
-(
-)
-;
 SimpleTest
 .
 finish
-(
-)
-;
-}
 unexpectedCallbackAndFinish
 )
 ;
