--- a/dom/media/tests/mochitest/test_getUserMedia_stopAudioStreamWithFollowupAudio.html
+++ b/dom/media/tests/mochitest/test_getUserMedia_stopAudioStreamWithFollowupAudio.html
@@ -23,9 +23,12 @@ utf
 title
 >
 mozGetUserMedia
-Basic
-Video
-Test
+Stop
+Audio
+Stream
+With
+Followup
+Audio
 <
 /
 title
@@ -159,13 +162,16 @@ cgi
 ?
 id
 =
-781534
+822109
 "
 >
 mozGetUserMedia
-Basic
-Video
-Test
+Stop
+Audio
+Stream
+With
+Followup
+Audio
 <
 /
 a
@@ -198,16 +204,16 @@ none
 "
 >
 <
-video
+audio
 id
 =
 "
-testVideo
+testAudio
 "
 >
 <
 /
-video
+audio
 >
 <
 /
@@ -241,25 +247,33 @@ test
 to
 verify
 that
-we
+I
 can
 complete
+an
+audio
+gum
+playback
+in
 a
-start
-and
-stop
 media
+*
+element
+stop
+the
+stream
+and
+then
+complete
+another
+audio
+gum
 playback
 *
-cycle
-for
-an
-video
-LocalMediaStream
-on
+in
 a
-video
-HTMLMediaElement
+media
+element
 .
 *
 /
@@ -269,41 +283,68 @@ function
 (
 )
 {
+getUserMedia
+(
+{
+audio
+:
+true
+}
+function
+(
+firstStream
+)
+{
 var
-testVideo
+testAudio
 =
 document
 .
 getElementById
 (
 '
-testVideo
+testAudio
 '
 )
 ;
+var
+streamPlayback
+=
+new
+LocalMediaStreamPlayback
+(
+testAudio
+firstStream
+)
+;
+streamPlayback
+.
+playMediaWithStreamStop
+(
+false
+function
+(
+)
+{
 getUserMedia
 (
 {
-video
+audio
 :
 true
 }
 function
 (
-aStream
+secondStream
 )
 {
-var
-playback
+streamPlayback
+.
+mediaStream
 =
-new
-LocalMediaStreamPlayback
-(
-testVideo
-aStream
-)
+secondStream
 ;
-playback
+streamPlayback
 .
 playMedia
 (
@@ -312,7 +353,7 @@ function
 (
 )
 {
-aStream
+secondStream
 .
 stop
 (
@@ -322,6 +363,14 @@ SimpleTest
 .
 finish
 (
+)
+;
+}
+unexpectedCallbackAndFinish
+)
+;
+}
+unexpectedCallbackAndFinish
 )
 ;
 }
