--- a/dom/media/tests/mochitest/test_getUserMedia_stopVideoAudioStream.html
+++ b/dom/media/tests/mochitest/test_getUserMedia_stopVideoAudioStream.html
@@ -23,9 +23,10 @@ utf
 title
 >
 mozGetUserMedia
-Basic
+Stop
 Video
-Test
+Audio
+Stream
 <
 /
 title
@@ -159,13 +160,14 @@ cgi
 ?
 id
 =
-781534
+822109
 "
 >
 mozGetUserMedia
-Basic
+Stop
 Video
-Test
+Audio
+Stream
 <
 /
 a
@@ -243,23 +245,32 @@ verify
 that
 we
 can
-complete
-a
 start
-and
-stop
-media
-playback
-*
-cycle
-for
-an
-video
-LocalMediaStream
-on
 a
 video
-HTMLMediaElement
++
+audio
+stream
+in
+a
+*
+media
+element
+call
+stop
+(
+)
+on
+the
+stream
+and
+successfully
+get
+an
+*
+ended
+event
+fired
 .
 *
 /
@@ -267,6 +278,21 @@ runTest
 (
 function
 (
+)
+{
+getUserMedia
+(
+{
+video
+:
+true
+audio
+:
+true
+}
+function
+(
+stream
 )
 {
 var
@@ -281,50 +307,24 @@ testVideo
 '
 )
 ;
-getUserMedia
-(
-{
-video
-:
-true
-}
-function
-(
-aStream
-)
-{
 var
-playback
+streamPlayback
 =
 new
 LocalMediaStreamPlayback
 (
 testVideo
-aStream
+stream
 )
 ;
-playback
+streamPlayback
 .
-playMedia
+playMediaWithStreamStop
 (
 false
-function
-(
-)
-{
-aStream
-.
-stop
-(
-)
-;
 SimpleTest
 .
 finish
-(
-)
-;
-}
 unexpectedCallbackAndFinish
 )
 ;
