--- a/dom/media/tests/mochitest/test_getUserMedia_stopVideoAudioStreamWithFollowupVideoAudio.html
+++ b/dom/media/tests/mochitest/test_getUserMedia_stopVideoAudioStreamWithFollowupVideoAudio.html
@@ -23,9 +23,16 @@ utf
 title
 >
 mozGetUserMedia
-Basic
+Stop
 Video
-Test
++
+Audio
+Stream
+With
+Followup
+Video
++
+Audio
 <
 /
 title
@@ -159,13 +166,20 @@ cgi
 ?
 id
 =
-781534
+822109
 "
 >
 mozGetUserMedia
-Basic
+Stop
 Video
-Test
++
+Audio
+Stream
+With
+Followup
+Video
++
+Audio
 <
 /
 a
@@ -241,25 +255,37 @@ test
 to
 verify
 that
-we
+I
 can
 complete
-a
-start
-and
-stop
-media
-playback
-*
-cycle
-for
 an
 video
-LocalMediaStream
-on
++
+audio
+gum
+playback
+in
 a
+*
+media
+element
+stop
+the
+stream
+and
+then
+complete
+another
 video
-HTMLMediaElement
++
+audio
+gum
+*
+playback
+in
+a
+media
+element
 .
 *
 /
@@ -267,6 +293,21 @@ runTest
 (
 function
 (
+)
+{
+getUserMedia
+(
+{
+video
+:
+true
+audio
+:
+true
+}
+function
+(
+firstStream
 )
 {
 var
@@ -281,29 +322,47 @@ testVideo
 '
 )
 ;
+var
+streamPlayback
+=
+new
+LocalMediaStreamPlayback
+(
+testVideo
+firstStream
+)
+;
+streamPlayback
+.
+playMediaWithStreamStop
+(
+false
+function
+(
+)
+{
 getUserMedia
 (
 {
 video
 :
 true
+audio
+:
+true
 }
 function
 (
-aStream
+secondStream
 )
 {
-var
-playback
+streamPlayback
+.
+mediaStream
 =
-new
-LocalMediaStreamPlayback
-(
-testVideo
-aStream
-)
+secondStream
 ;
-playback
+streamPlayback
 .
 playMedia
 (
@@ -312,7 +371,7 @@ function
 (
 )
 {
-aStream
+secondStream
 .
 stop
 (
@@ -322,6 +381,14 @@ SimpleTest
 .
 finish
 (
+)
+;
+}
+unexpectedCallbackAndFinish
+)
+;
+}
+unexpectedCallbackAndFinish
 )
 ;
 }
