--- a/dom/media/tests/mochitest/test_getUserMedia_stopVideoStreamWithFollowupVideo.html
+++ b/dom/media/tests/mochitest/test_getUserMedia_stopVideoStreamWithFollowupVideo.html
@@ -23,9 +23,12 @@ utf
 title
 >
 mozGetUserMedia
-Basic
+Stop
 Video
-Test
+Stream
+With
+Followup
+Video
 <
 /
 title
@@ -159,13 +162,16 @@ cgi
 ?
 id
 =
-781534
+822109
 "
 >
 mozGetUserMedia
-Basic
+Stop
 Video
-Test
+Stream
+With
+Followup
+Video
 <
 /
 a
@@ -241,25 +247,33 @@ test
 to
 verify
 that
-we
+I
 can
 complete
+an
+audio
+gum
+playback
+in
 a
-start
-and
-stop
 media
+*
+element
+stop
+the
+stream
+and
+then
+complete
+another
+audio
+gum
 playback
 *
-cycle
-for
-an
-video
-LocalMediaStream
-on
+in
 a
-video
-HTMLMediaElement
+media
+element
 .
 *
 /
@@ -267,6 +281,18 @@ runTest
 (
 function
 (
+)
+{
+getUserMedia
+(
+{
+video
+:
+true
+}
+function
+(
+firstStream
 )
 {
 var
@@ -281,6 +307,25 @@ testVideo
 '
 )
 ;
+var
+streamPlayback
+=
+new
+LocalMediaStreamPlayback
+(
+testVideo
+firstStream
+)
+;
+streamPlayback
+.
+playMediaWithStreamStop
+(
+false
+function
+(
+)
+{
 getUserMedia
 (
 {
@@ -290,20 +335,16 @@ true
 }
 function
 (
-aStream
+secondStream
 )
 {
-var
-playback
+streamPlayback
+.
+mediaStream
 =
-new
-LocalMediaStreamPlayback
-(
-testVideo
-aStream
-)
+secondStream
 ;
-playback
+streamPlayback
 .
 playMedia
 (
@@ -312,7 +353,7 @@ function
 (
 )
 {
-aStream
+secondStream
 .
 stop
 (
@@ -322,6 +363,14 @@ SimpleTest
 .
 finish
 (
+)
+;
+}
+unexpectedCallbackAndFinish
+)
+;
+}
+unexpectedCallbackAndFinish
 )
 ;
 }
