--- a/accessible/tests/mochitest/name/test_general.html
+++ b/accessible/tests/mochitest/name/test_general.html
@@ -947,6 +947,34 @@ country
 ;
 /
 /
+Insert
+spaces
+around
+the
+control
+'
+s
+value
+to
+not
+jamm
+sibling
+text
+nodes
+testName
+(
+"
+insert_spaces_around_control
+"
+"
+start
+value
+end
+"
+)
+;
+/
+/
 Gets
 the
 name
@@ -2736,6 +2764,56 @@ Bug
 a
 >
 <
+a
+target
+=
+"
+_blank
+"
+href
+=
+"
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+823927
+"
+title
+=
+"
+Text
+is
+jammed
+with
+control
+'
+s
+text
+in
+name
+computation
+"
+>
+Bug
+823927
+<
+/
+a
+>
+<
 p
 id
 =
@@ -3665,6 +3743,28 @@ of
 origin
 "
 /
+>
+<
+label
+id
+=
+"
+insert_spaces_around_control
+"
+>
+start
+<
+input
+value
+=
+"
+value
+"
+>
+end
+<
+/
+label
 >
 <
 a
