bug 841430 - nuke nsIEditorDocShell r=bz
UltraBlame original commit: 9086328e2ea7666965bb38f1d6355905ebf0f2c0

--- a/widget/tests/test_imestate.html
+++ b/widget/tests/test_imestate.html
@@ -9326,7 +9326,7 @@ Components
 .
 interfaces
 .
-nsIEditorDocShell
+nsIDocShell
 )
 .
 editor
@@ -9641,7 +9641,7 @@ Components
 .
 interfaces
 .
-nsIEditorDocShell
+nsIDocShell
 )
 .
 editor
@@ -10022,7 +10022,7 @@ Components
 .
 interfaces
 .
-nsIEditorDocShell
+nsIDocShell
 )
 .
 editor
@@ -10575,7 +10575,7 @@ Components
 .
 interfaces
 .
-nsIEditorDocShell
+nsIDocShell
 )
 .
 editor
@@ -11126,7 +11126,7 @@ Components
 .
 interfaces
 .
-nsIEditorDocShell
+nsIDocShell
 )
 .
 editor
