Bug 841661 - Remove the observer in this test when it finishes so we don't get failures from it in unrelated tests. r=mcmanus
UltraBlame original commit: 53390204f2138dd7efa7af082d9977e5c52c9bcf

--- a/image/test/mochitest/test_net_failedtoprocess.html
+++ b/image/test/mochitest/test_net_failedtoprocess.html
@@ -187,6 +187,39 @@ Components
 classes
 ;
 var
+obs
+=
+Cc
+[
+"
+mozilla
+.
+org
+/
+observer
+-
+service
+;
+1
+"
+]
+.
+getService
+(
+)
+;
+obs
+=
+obs
+.
+QueryInterface
+(
+Ci
+.
+nsIObserverService
+)
+;
+var
 observer
 =
 {
@@ -305,6 +338,27 @@ subject
 "
 )
 ;
+obs
+.
+removeObserver
+(
+this
+"
+net
+:
+failed
+-
+to
+-
+process
+-
+uri
+-
+content
+"
+false
+)
+;
 SimpleTest
 .
 finish
@@ -313,39 +367,6 @@ finish
 ;
 }
 }
-;
-var
-obs
-=
-Cc
-[
-"
-mozilla
-.
-org
-/
-observer
--
-service
-;
-1
-"
-]
-.
-getService
-(
-)
-;
-obs
-=
-obs
-.
-QueryInterface
-(
-Ci
-.
-nsIObserverService
-)
 ;
 obs
 .
