--- a/content/html/content/test/forms/test_input_sanitization.html
+++ b/content/html/content/test/forms/test_input_sanitization.html
@@ -169,11 +169,222 @@ javascript
 /
 *
 *
-Test
-for
-Bug
-549475
 *
+This
+files
+tests
+the
+'
+value
+sanitization
+algorithm
+'
+for
+the
+various
+input
+*
+types
+.
+Note
+that
+an
+input
+'
+s
+value
+is
+affected
+by
+more
+than
+just
+its
+type
+'
+s
+*
+value
+sanitization
+algorithm
+;
+e
+.
+g
+.
+some
+type
+=
+range
+has
+actions
+that
+the
+user
+*
+agent
+must
+perform
+to
+change
+the
+element
+'
+s
+value
+to
+avoid
+underflow
+/
+overflow
+*
+and
+step
+mismatch
+(
+when
+possible
+)
+.
+We
+specifically
+avoid
+triggering
+these
+*
+other
+actions
+here
+so
+that
+this
+test
+only
+tests
+the
+value
+sanitization
+*
+algorithm
+for
+the
+various
+input
+types
+.
+*
+*
+XXXjwatt
+splitting
+out
+testing
+of
+the
+value
+sanitization
+algorithm
+and
+*
+"
+other
+things
+"
+that
+affect
+.
+value
+makes
+it
+harder
+to
+know
+what
+we
+'
+re
+testing
+*
+and
+what
+we
+'
+ve
+missed
+because
+what
+'
+s
+included
+in
+the
+value
+sanitization
+*
+algorithm
+and
+what
+'
+s
+not
+is
+different
+from
+input
+type
+to
+input
+type
+.
+It
+*
+seems
+to
+me
+it
+would
+be
+better
+to
+have
+a
+test
+(
+maybe
+one
+per
+type
+)
+focused
+*
+on
+testing
+.
+value
+for
+permutations
+of
+all
+other
+inputs
+that
+can
+affect
+it
+.
+*
+The
+value
+sanitization
+algorithm
+is
+just
+an
+internal
+spec
+concept
+after
+all
+.
 *
 /
 /
@@ -256,15 +467,15 @@ date
 "
 time
 "
+"
+range
+"
 ]
 ;
 var
 todoTypes
 =
 [
-"
-range
-"
 "
 color
 "
@@ -493,6 +704,91 @@ aValue
 "
 "
 :
+aValue
+;
+case
+"
+range
+"
+:
+var
+defaultMinimum
+=
+0
+;
+var
+defaultMaximum
+=
+100
+;
+var
+value
+=
+Number
+(
+aValue
+)
+;
+if
+(
+isNaN
+(
+value
+)
+)
+{
+return
+(
+(
+defaultMaximum
+-
+defaultMinimum
+)
+/
+2
+)
+.
+toString
+(
+)
+;
+/
+/
+"
+50
+"
+}
+if
+(
+value
+<
+defaultMinimum
+)
+{
+return
+defaultMinimum
+.
+toString
+(
+)
+;
+}
+if
+(
+value
+>
+defaultMaximum
+)
+{
+return
+defaultMaximum
+.
+toString
+(
+)
+;
+}
+return
 aValue
 ;
 case
@@ -1103,29 +1399,6 @@ return
 ;
 case
 "
-range
-"
-:
-ok
-(
-false
-)
-;
-/
-/
-TODO
-:
-write
-the
-sanitize
-algorithm
-.
-return
-"
-"
-;
-case
-"
 color
 "
 :
@@ -1263,6 +1536,8 @@ u0009
 /
 For
 number
+and
+range
 :
 "
 42
