--- a/content/html/content/test/test_bug590363.html
+++ b/content/html/content/test/test_bug590363.html
@@ -294,6 +294,12 @@ time
 "
 true
 ]
+[
+"
+range
+"
+true
+]
 /
 /
 '
@@ -322,9 +328,6 @@ week
 datetime
 -
 local
-"
-"
-range
 "
 "
 color
@@ -412,6 +415,114 @@ i
 var
 expectedValue
 ;
+/
+/
+range
+will
+sanitize
+its
+value
+to
+50
+(
+the
+default
+)
+if
+it
+isn
+'
+t
+a
+valid
+/
+/
+number
+.
+We
+need
+to
+handle
+that
+specially
+.
+if
+(
+testData
+[
+j
+]
+[
+0
+]
+=
+=
+'
+range
+'
+|
+|
+testData
+[
+i
+]
+[
+0
+]
+=
+=
+'
+range
+'
+)
+{
+if
+(
+testData
+[
+j
+]
+[
+0
+]
+=
+=
+'
+date
+'
+|
+|
+testData
+[
+j
+]
+[
+0
+]
+=
+=
+'
+time
+'
+)
+{
+expectedValue
+=
+'
+'
+;
+}
+else
+{
+expectedValue
+=
+'
+50
+'
+;
+}
+}
+else
 if
 (
 nonTrivialSanitizing
@@ -738,6 +849,68 @@ data
 0
 ]
 ;
+if
+(
+data
+[
+0
+]
+=
+=
+'
+range
+'
+)
+{
+is
+(
+e
+.
+value
+'
+50
+'
+"
+.
+value
+should
+still
+return
+the
+same
+value
+after
+"
++
+"
+changing
+type
+from
+"
++
+data
+[
+0
+]
++
+"
+to
+'
+file
+'
+then
+reverting
+to
+"
++
+data
+[
+0
+]
+)
+;
+}
+else
 if
 (
 data
