--- a/dom/media/tests/crashtests/822197.html
+++ b/dom/media/tests/crashtests/822197.html
@@ -5,6 +5,13 @@ html
 >
 <
 html
+class
+=
+"
+reftest
+-
+wait
+"
 >
 <
 head
@@ -49,6 +56,23 @@ pcArray
 [
 ]
 ;
+function
+finish
+(
+)
+{
+document
+.
+documentElement
+.
+removeAttribute
+(
+"
+class
+"
+)
+;
+}
 function
 start
 (
@@ -102,6 +126,10 @@ pc
 )
 ;
 }
+finish
+(
+)
+;
 }
 <
 /
@@ -116,15 +144,12 @@ body
 onload
 =
 "
-start
+setTimeout
 (
+start
+100
 )
-;
 "
->
-<
-/
-body
 >
 <
 /
