Bug 842087 - Update pdf.js to version 0.7.236. r=yury
UltraBlame original commit: bf1c98a314c53acb5ea235687dd3d7b1d3b85ee9

--- a/browser/extensions/pdfjs/content/web/viewer.html
+++ b/browser/extensions/pdfjs/content/web/viewer.html
@@ -1484,6 +1484,11 @@ class
 toolbarButton
 zoomOut
 "
+id
+=
+"
+zoom_out
+"
 title
 =
 "
@@ -1546,6 +1551,11 @@ class
 "
 toolbarButton
 zoomIn
+"
+id
+=
+"
+zoom_in
 "
 title
 =
