Bug 826044: Fix Webrtc crashtests, disable known permaoranges r=jsmith
UltraBlame original commit: 31fa1546a849d6af0a0dc19797b9f69f2f5651b0

--- a/dom/media/tests/crashtests/799419.html
+++ b/dom/media/tests/crashtests/799419.html
@@ -5,6 +5,13 @@ HTML
 >
 <
 html
+class
+=
+"
+reftest
+-
+wait
+"
 >
 <
 head
@@ -45,6 +52,23 @@ application
 javascript
 "
 >
+function
+finish
+(
+)
+{
+document
+.
+documentElement
+.
+removeAttribute
+(
+"
+class
+"
+)
+;
+}
 function
 boom
 (
@@ -125,6 +149,10 @@ close
 (
 )
 ;
+finish
+(
+)
+;
 }
 <
 /
@@ -139,8 +167,10 @@ body
 onload
 =
 "
-boom
+setTimeout
 (
+boom
+100
 )
 "
 >
