--- a/dom/media/tests/crashtests/802982.html
+++ b/dom/media/tests/crashtests/802982.html
@@ -5,6 +5,13 @@ html
 >
 <
 html
+class
+=
+"
+reftest
+-
+wait
+"
 >
 <
 head
@@ -40,6 +47,23 @@ javascript
 "
 >
 function
+finish
+(
+)
+{
+document
+.
+documentElement
+.
+removeAttribute
+(
+"
+class
+"
+)
+;
+}
+function
 boom
 (
 )
@@ -73,6 +97,23 @@ mozGetUserMedia
 )
 ;
 }
+finish
+(
+)
+;
+/
+/
+we
+'
+re
+not
+waiting
+for
+success
+/
+error
+callbacks
+here
 }
 <
 /
@@ -87,15 +128,12 @@ body
 onload
 =
 "
-boom
+setTimeout
 (
+boom
+100
 )
-;
 "
->
-<
-/
-body
 >
 <
 /
