--- a/dom/media/tests/crashtests/837324.html
+++ b/dom/media/tests/crashtests/837324.html
@@ -5,6 +5,13 @@ html
 >
 <
 html
+class
+=
+"
+reftest
+-
+wait
+"
 >
 <
 head
@@ -38,6 +45,23 @@ application
 javascript
 "
 >
+function
+finish
+(
+)
+{
+document
+.
+documentElement
+.
+removeAttribute
+(
+"
+class
+"
+)
+;
+}
 function
 start
 (
@@ -108,11 +132,33 @@ sdpMLineIndex
 }
 )
 ;
+try
+{
 o0
 .
 addIceCandidate
 (
 o1
+)
+;
+}
+catch
+(
+e
+)
+{
+}
+/
+/
+bug
+842075
+-
+remove
+try
+when
+fixed
+finish
+(
 )
 ;
 }
@@ -129,15 +175,12 @@ body
 onload
 =
 "
-start
+setTimeout
 (
+start
+100
 )
-;
 "
->
-<
-/
-body
 >
 <
 /
