--- a/dom/media/tests/crashtests/837421.html
+++ b/dom/media/tests/crashtests/837421.html
@@ -5,6 +5,13 @@ html
 >
 <
 html
+class
+=
+"
+reftest
+-
+wait
+"
 >
 <
 head
@@ -38,6 +45,23 @@ application
 javascript
 "
 >
+function
+finish
+(
+)
+{
+document
+.
+documentElement
+.
+removeAttribute
+(
+"
+class
+"
+)
+;
+}
 function
 start
 (
@@ -137,6 +161,8 @@ mozRTCPeerConnection
 (
 )
 ;
+try
+{
 o2
 .
 addIceCandidate
@@ -144,6 +170,22 @@ addIceCandidate
 o1
 )
 ;
+}
+catch
+(
+e
+)
+{
+}
+/
+/
+bug
+842075
+-
+remove
+try
+when
+fixed
 o2
 .
 connectDataConnection
@@ -254,11 +296,33 @@ e
 )
 {
 }
+try
+{
 o2
 .
 addIceCandidate
 (
 o3
+)
+;
+}
+catch
+(
+e
+)
+{
+}
+/
+/
+bug
+842075
+-
+remove
+try
+when
+fixed
+finish
+(
 )
 ;
 }
@@ -275,15 +339,12 @@ body
 onload
 =
 "
-start
+setTimeout
 (
+start
+100
 )
-;
 "
->
-<
-/
-body
 >
 <
 /
