Bug 841811 - Remove deprecated enablePrivilege from test added in bug 790475. r=ehsan.
UltraBlame original commit: e5720e459a543ca76af7946779bbb0930dce0d08

--- a/editor/libeditor/html/tests/test_bug790475.html
+++ b/editor/libeditor/html/tests/test_bug790475.html
@@ -238,14 +238,19 @@ getEditor
 const
 Ci
 =
-Components
+SpecialPowers
 .
-interfaces
+Ci
 ;
 var
 editingSession
 =
+SpecialPowers
+.
+wrap
+(
 window
+)
 .
 QueryInterface
 (
@@ -476,19 +481,6 @@ isSpellingCheckOk
 (
 )
 {
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
-(
-"
-UniversalXPConnect
-"
-)
-;
 var
 sel
 =
