bug 825341 - convert range to webidl r=bz, smaug
UltraBlame original commit: 24f601f285dc5fb2bee2f116cbca2ae0f32f4270

--- a/editor/libeditor/html/tests/test_bug629845.html
+++ b/editor/libeditor/html/tests/test_bug629845.html
@@ -233,6 +233,26 @@ iframe
 0
 ]
 ;
+is
+(
+frame
+.
+contentDocument
+.
+designMode
+"
+on
+"
+"
+design
+mode
+should
+be
+on
+!
+"
+)
+;
 var
 caught
 =
@@ -257,6 +277,21 @@ catch
 e
 )
 {
+ok
+(
+false
+"
+exception
+"
++
+e
++
+"
+was
+thrown
+"
+)
+;
 caught
 =
 true
